--- a/source/templates.tex
+++ b/source/templates.tex
@@ -116,10 +116,8 @@ Its \grammarterm{declaration} shall not be an
 In a function template declaration, the \grammarterm{unqualified-id} of the
 \grammarterm{declarator-id} shall be a name.
 \begin{note}
-In a class template declaration, if the \grammarterm{class-name}
-is a
-\grammarterm{simple-template-id},
-the declaration declares a partial specialization\iref{temp.spec.partial}.
+A class or variable template declaration of a \grammarterm{simple-template-id}
+declares a partial specialization\iref{temp.spec.partial}.
 \end{note}
 
 \pnum
@@ -135,8 +133,8 @@ no declarator is permitted.
 \indextext{template name!linkage of}%
 A specialization (explicit or implicit) of one template is
 distinct from all specializations of any other template.
-A template, a template explicit specialization\iref{temp.expl.spec}, and a class
-template partial specialization shall not have C language linkage.
+A template, an explicit specialization\iref{temp.expl.spec}, and a
+partial specialization shall not have C language linkage.
 \begin{note}
 Default arguments for function templates and for member functions of
 class templates are considered definitions for the purpose of template
@@ -2153,6 +2151,11 @@ e.g., by a \grammarterm{typedef-name}.
 \rSec2[temp.decls.general]{General}
 
 \pnum
+The template parameters of a template are specified in
+the angle bracket enclosed list
+that immediately follows the keyword \keyword{template}.
+
+\pnum
 A \defnadj{primary}{template} declaration is one
 in which the name of the template is not followed by
 a \grammarterm{template-argument-list}.
@@ -2160,8 +2163,9 @@ The template argument list of a primary template is
 the template argument list of its \grammarterm{template-head}\iref{temp.arg}.
 A template declaration in which the name of the template is followed by
 a \grammarterm{template-argument-list} is
-a partial specialization of
-the template named in the declaration\iref{temp.spec.partial}.
+a partial specialization\iref{temp.spec.partial} of
+the template named in the declaration,
+which shall be a class or variable template.
 
 \pnum
 For purposes of name lookup and instantiation,
@@ -3129,13 +3133,14 @@ does not declare the same function or function template as a declaration in any 
 
 \pnum
 \indextext{specialization!class template partial}%
-A partial specialization of a class template provides an alternative definition
+A partial specialization of a template provides an alternative definition
 of the template that is used instead of the primary definition when the
 arguments in a specialization match those given in the partial
 specialization\iref{temp.spec.partial.match}.
-A declaration of the primary template shall precede any specialization of
+A declaration of the primary template shall precede
+any partial specialization of
 that template.
-A partial specialization shall be reachable from any use of a class template
+A partial specialization shall be reachable from any use of a template
 specialization that would make use of the partial specialization as the result of
 an implicit or explicit instantiation; no diagnostic is required.
 
@@ -3143,9 +3148,7 @@ an implicit or explicit instantiation; no diagnostic is required.
 Two partial specialization declarations declare the same entity
 if they are partial specializations of the same template and have equivalent
 \grammarterm{template-head}s and template argument lists\iref{temp.over.link}.
-Each class template partial specialization is a distinct template and
-definitions shall be provided for the members of a template partial
-specialization\iref{temp.class.spec.mfunc}.
+Each partial specialization is a distinct template.
 
 \pnum
 \begin{example}
@@ -3181,10 +3184,8 @@ but the partial specialization is more constrained\iref{temp.constr.order}.
 \end{example}
 
 \pnum
-The template parameters are specified in the angle bracket enclosed list
-that immediately follows the keyword \keyword{template}.
 The template argument list of a partial specialization is
-the \grammarterm{template-argument-list} of the \grammarterm{class-name}.
+the \grammarterm{template-argument-list} following the name of the template.
 
 \pnum
 A partial specialization may be declared in any
@@ -3452,7 +3453,6 @@ because \tcode{B} is more specialized than \tcode{A}.
 \rSec3[temp.spec.partial.member]{Members of class template partial specializations}
 
 \pnum
-A class template partial specialization is a distinct template.
 The members of the class template partial specialization are
 unrelated to the members of the primary template.
 Class template partial specialization members that are used in a way that
@@ -4789,8 +4789,8 @@ in the definition of a nested class of a class template,
 the name of the nested class referenced as a member of the
 current instantiation, or
 \item
-in the definition of a partial specialization
-or a member of a partial specialization, the name of
+in the definition of a class template partial specialization
+or a member of a class template partial specialization, the name of
 the class template followed by a template argument list
 equivalent to that of the partial specialization\iref{temp.spec.partial}
 enclosed in \tcode{<>} (or an equivalent template alias specialization).
