--- a/source/templates.tex
+++ b/source/templates.tex
@@ -5718,7 +5718,7 @@ void g(D<int>* p, D<char>* pp, D<double>* ppp) {
 }
 \end{codeblock}
 \end{example}
-If the template selected for the specialization\iref{temp.class.spec.match}
+If the template selected for the specialization\iref{temp.spec.partial.match}
 has been declared, but not defined,
 at the point of instantiation\iref{temp.point},
 the instantiation yields an incomplete class type\iref{basic.types}.
