--- a/source/containers.tex
+++ b/source/containers.tex
@@ -9819,11 +9819,14 @@ namespace std {
     queue() : queue(Container()) {}
     explicit queue(const Container&);
     explicit queue(Container&&);
+    template<class InputIterator> queue(InputIterator first, InputIterator last);
     template<class Alloc> explicit queue(const Alloc&);
     template<class Alloc> queue(const Container&, const Alloc&);
     template<class Alloc> queue(Container&&, const Alloc&);
     template<class Alloc> queue(const queue&, const Alloc&);
     template<class Alloc> queue(queue&&, const Alloc&);
+    template<class InputIterator, class Alloc>
+      queue(InputIterator first, InputIterator last, const Alloc&);
 
     [[nodiscard]] bool empty() const    { return c.empty(); }
     size_type         size()  const     { return c.size(); }
@@ -9844,8 +9847,16 @@ namespace std {
   template<class Container>
     queue(Container) -> queue<typename Container::value_type, Container>;
 
+  template<class InputIterator>
+    queue(InputIterator, InputIterator) -> queue<@\exposid{iter-value-type}@<InputIterator>>;
+
   template<class Container, class Allocator>
     queue(Container, Allocator) -> queue<typename Container::value_type, Container>;
+
+  template<class InputIterator, class Allocator>
+    queue(InputIterator, InputIterator, Allocator)
+      -> queue<@\exposid{iter-value-type}@<InputIterator>, deque<@\exposid{iter-value-type}@<InputIterator>,
+               Allocator>>;
 
   template<class T, class Container, class Alloc>
     struct uses_allocator<queue<T, Container>, Alloc>
@@ -9873,6 +9884,18 @@ explicit queue(Container&& cont);
 \pnum
 \effects
 Initializes \tcode{c} with \tcode{std::move(cont)}.
+\end{itemdescr}
+
+\begin{itemdecl}
+template<class InputIterator>
+  queue(InputIterator first, InputIterator last);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Initializes \tcode{c} with
+\tcode{first} as the first argument and \tcode{last} as the second argument.
 \end{itemdescr}
 
 \rSec3[queue.cons.alloc]{Constructors with allocators}
@@ -9933,6 +9956,20 @@ template<class Alloc> queue(queue&& q, const Alloc& a);
 \effects
 Initializes \tcode{c} with \tcode{std::move(q.c)} as the first argument and \tcode{a}
 as the second argument.
+\end{itemdescr}
+
+\begin{itemdecl}
+template<class InputIterator, class Alloc>
+  queue(InputIterator first, InputIterator last, const Alloc & alloc);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Initializes \tcode{c} with
+\tcode{first} as the first argument,
+\tcode{last} as the second argument, and
+\tcode{alloc} as the third argument.
 \end{itemdescr}
 
 \rSec3[queue.ops]{Operators}
@@ -10388,11 +10425,14 @@ namespace std {
     stack() : stack(Container()) {}
     explicit stack(const Container&);
     explicit stack(Container&&);
+    template<class InputIterator> stack(InputIterator first, InputIterator last);
     template<class Alloc> explicit stack(const Alloc&);
     template<class Alloc> stack(const Container&, const Alloc&);
     template<class Alloc> stack(Container&&, const Alloc&);
     template<class Alloc> stack(const stack&, const Alloc&);
     template<class Alloc> stack(stack&&, const Alloc&);
+    template<class InputIterator, class Alloc>
+      stack(InputIterator first, InputIterator last, const Alloc&);
 
     [[nodiscard]] bool empty() const    { return c.empty(); }
     size_type size()  const             { return c.size(); }
@@ -10411,8 +10451,16 @@ namespace std {
   template<class Container>
     stack(Container) -> stack<typename Container::value_type, Container>;
 
+  template<class InputIterator>
+    stack(InputIterator, InputIterator) -> stack<@\exposid{iter-value-type}@<InputIterator>>;
+
   template<class Container, class Allocator>
     stack(Container, Allocator) -> stack<typename Container::value_type, Container>;
+
+  template<class InputIterator, class Allocator>
+    stack(InputIterator, InputIterator, Allocator)
+      -> stack<@\exposid{iter-value-type}@<InputIterator>, deque<@\exposid{iter-value-type}@<InputIterator>,
+               Allocator>>;
 
   template<class T, class Container, class Alloc>
     struct uses_allocator<stack<T, Container>, Alloc>
@@ -10442,6 +10490,19 @@ explicit stack(Container&& cont);
 \pnum
 \effects
 Initializes \tcode{c} with \tcode{std::move(cont)}.
+\end{itemdescr}
+
+\indexlibraryctor{stack}%
+\begin{itemdecl}
+template<class InputIterator>
+  stack(InputIterator first, InputIterator last);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Initializes \tcode{c} with
+\tcode{first} as the first argument and \tcode{last} as the second argument.
 \end{itemdescr}
 
 \rSec3[stack.cons.alloc]{Constructors with allocators}
@@ -10507,6 +10568,21 @@ template<class Alloc> stack(stack&& s, const Alloc& a);
 \effects
 Initializes \tcode{c} with \tcode{std::move(s.c)} as the first argument and \tcode{a}
 as the second argument.
+\end{itemdescr}
+
+\indexlibraryctor{stack}%
+\begin{itemdecl}
+template<class InputIterator, class Alloc>
+stack(InputIterator first, InputIterator last, const Alloc & alloc);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Initializes \tcode{c} with
+\tcode{first} as the first argument,
+\tcode{last} as the second argument, and
+\tcode{alloc} as the third argument.
 \end{itemdescr}
 
 \rSec3[stack.ops]{Operators}
