--- a/source/utilities.tex
+++ b/source/utilities.tex
@@ -2441,7 +2441,7 @@ namespace std {
 
   // \ref{optional.specalg}, specialized algorithms
   template<class T>
-    void swap(optional<T>&, optional<T>&) noexcept(@\seebelow@);
+    constexpr void swap(optional<T>&, optional<T>&) noexcept(@\seebelow@);
 
   template<class T>
     constexpr optional<@\seebelow@> make_optional(T&&);
@@ -2481,25 +2481,25 @@ namespace std {
     template<class U = T>
       constexpr explicit(@\seebelow@) optional(U&&);
     template<class U>
-      explicit(@\seebelow@) optional(const optional<U>&);
+      constexpr explicit(@\seebelow@) optional(const optional<U>&);
     template<class U>
-      explicit(@\seebelow@) optional(optional<U>&&);
+      constexpr explicit(@\seebelow@) optional(optional<U>&&);
 
     // \ref{optional.dtor}, destructor
-    ~optional();
+    constexpr ~optional();
 
     // \ref{optional.assign}, assignment
-    optional& operator=(nullopt_t) noexcept;
+    constexpr optional& operator=(nullopt_t) noexcept;
     constexpr optional& operator=(const optional&);
     constexpr optional& operator=(optional&&) noexcept(@\seebelow@);
-    template<class U = T> optional& operator=(U&&);
-    template<class U> optional& operator=(const optional<U>&);
-    template<class U> optional& operator=(optional<U>&&);
-    template<class... Args> T& emplace(Args&&...);
-    template<class U, class... Args> T& emplace(initializer_list<U>, Args&&...);
+    template<class U = T> constexpr optional& operator=(U&&);
+    template<class U> constexpr optional& operator=(const optional<U>&);
+    template<class U> constexpr optional& operator=(optional<U>&&);
+    template<class... Args> constexpr T& emplace(Args&&...);
+    template<class U, class... Args> constexpr T& emplace(initializer_list<U>, Args&&...);
 
     // \ref{optional.swap}, swap
-    void swap(optional&) noexcept(@\seebelow@);
+    constexpr void swap(optional&) noexcept(@\seebelow@);
 
     // \ref{optional.observe}, observers
     constexpr const T* operator->() const;
@@ -2518,7 +2518,7 @@ namespace std {
     template<class U> constexpr T value_or(U&&) &&;
 
     // \ref{optional.mod}, modifiers
-    void reset() noexcept;
+    constexpr void reset() noexcept;
 
   private:
     T *val;         // \expos
@@ -2718,7 +2718,7 @@ The expression inside \keyword{explicit} is equivalent to:
 
 \indexlibraryctor{optional}%
 \begin{itemdecl}
-template<class U> explicit(@\seebelow@) optional(const optional<U>& rhs);
+template<class U> constexpr explicit(@\seebelow@) optional(const optional<U>& rhs);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -2760,7 +2760,7 @@ The expression inside \keyword{explicit} is equivalent to:
 
 \indexlibraryctor{optional}%
 \begin{itemdecl}
-template<class U> explicit(@\seebelow@) optional(optional<U>&& rhs);
+template<class U> constexpr explicit(@\seebelow@) optional(optional<U>&& rhs);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -2805,7 +2805,7 @@ The expression inside \keyword{explicit} is equivalent to:
 
 \indexlibrarydtor{optional}%
 \begin{itemdecl}
-~optional();
+constexpr ~optional();
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -2825,7 +2825,7 @@ If \tcode{is_trivially_destructible_v<T>} is \tcode{true}, then this destructor 
 
 \indexlibrarymember{operator=}{optional}%
 \begin{itemdecl}
-optional<T>& operator=(nullopt_t) noexcept;
+constexpr optional<T>& operator=(nullopt_t) noexcept;
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -2946,7 +2946,7 @@ this assignment operator is trivial.
 
 \indexlibrarymember{operator=}{optional}%
 \begin{itemdecl}
-template<class U = T> optional<T>& operator=(U&& v);
+template<class U = T> constexpr optional<T>& operator=(U&& v);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -2976,7 +2976,7 @@ If any exception is thrown, the result of the expression \tcode{bool(*this)} rem
 
 \indexlibrarymember{operator=}{optional}%
 \begin{itemdecl}
-template<class U> optional<T>& operator=(const optional<U>& rhs);
+template<class U> constexpr optional<T>& operator=(const optional<U>& rhs);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -3039,7 +3039,7 @@ the exception safety guarantee of \tcode{T}'s assignment.
 
 \indexlibrarymember{operator=}{optional}%
 \begin{itemdecl}
-template<class U> optional<T>& operator=(optional<U>&& rhs);
+template<class U> constexpr optional<T>& operator=(optional<U>&& rhs);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -3103,7 +3103,7 @@ the exception safety guarantee of \tcode{T}'s assignment.
 
 \indexlibrarymember{emplace}{optional}%
 \begin{itemdecl}
-template<class... Args> T& emplace(Args&&... args);
+template<class... Args> constexpr T& emplace(Args&&... args);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -3134,7 +3134,7 @@ If an exception is thrown during the call to \tcode{T}'s constructor, \tcode{*th
 
 \indexlibrarymember{emplace}{optional}%
 \begin{itemdecl}
-template<class U, class... Args> T& emplace(initializer_list<U> il, Args&&... args);
+template<class U, class... Args> constexpr T& emplace(initializer_list<U> il, Args&&... args);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -3167,7 +3167,7 @@ If an exception is thrown during the call to \tcode{T}'s constructor, \tcode{*th
 
 \indexlibrarymember{swap}{optional}%
 \begin{itemdecl}
-void swap(optional& rhs) noexcept(@\seebelow@);
+constexpr void swap(optional& rhs) noexcept(@\seebelow@);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -3388,7 +3388,7 @@ return bool(*this) ? std::move(**this) : static_cast<T>(std::forward<U>(v));
 
 \indexlibrarymember{reset}{optional}%
 \begin{itemdecl}
-void reset() noexcept;
+constexpr void reset() noexcept;
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -3847,7 +3847,8 @@ Equivalent to: \tcode{return bool(x) ?\ *x <=> v :\ strong_ordering::less;}
 
 \indexlibrarymember{swap}{optional}%
 \begin{itemdecl}
-template<class T> void swap(optional<T>& x, optional<T>& y) noexcept(noexcept(x.swap(y)));
+template<class T>
+  constexpr void swap(optional<T>& x, optional<T>& y) noexcept(noexcept(x.swap(y)));
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -4023,7 +4024,7 @@ namespace std {
 
   // \ref{variant.specalg}, specialized algorithms
   template<class... Types>
-    void swap(variant<Types...>&, variant<Types...>&) noexcept(@\seebelow@);
+    constexpr void swap(variant<Types...>&, variant<Types...>&) noexcept(@\seebelow@);
 
   // \ref{variant.bad.access}, class \tcode{bad_variant_access}
   class bad_variant_access;
@@ -4070,24 +4071,25 @@ namespace std {
     constexpr variant& operator=(const variant&);
     constexpr variant& operator=(variant&&) noexcept(@\seebelow@);
 
-    template<class T> variant& operator=(T&&) noexcept(@\seebelow@);
+    template<class T> constexpr variant& operator=(T&&) noexcept(@\seebelow@);
 
     // \ref{variant.mod}, modifiers
     template<class T, class... Args>
-      T& emplace(Args&&...);
+      constexpr T& emplace(Args&&...);
     template<class T, class U, class... Args>
-      T& emplace(initializer_list<U>, Args&&...);
+      constexpr T& emplace(initializer_list<U>, Args&&...);
     template<size_t I, class... Args>
-      variant_alternative_t<I, variant<Types...>>& emplace(Args&&...);
+      constexpr variant_alternative_t<I, variant<Types...>>& emplace(Args&&...);
     template<size_t I, class U, class... Args>
-      variant_alternative_t<I, variant<Types...>>& emplace(initializer_list<U>, Args&&...);
+      constexpr variant_alternative_t<I, variant<Types...>>&
+        emplace(initializer_list<U>, Args&&...);
 
     // \ref{variant.status}, value status
     constexpr bool valueless_by_exception() const noexcept;
     constexpr size_t index() const noexcept;
 
     // \ref{variant.swap}, swap
-    void swap(variant&) noexcept(@\seebelow@);
+    constexpr void swap(variant&) noexcept(@\seebelow@);
   };
 }
 \end{codeblock}
@@ -4413,7 +4415,7 @@ constructor is a constexpr constructor.
 
 \indexlibrarydtor{variant}%
 \begin{itemdecl}
-~variant();
+constexpr ~variant();
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -4532,7 +4534,7 @@ guarantee of $\tcode{T}_j$'s move assignment; \tcode{index()} will be $j$.
 
 \indexlibrarymember{operator=}{variant}%
 \begin{itemdecl}
-template<class T> variant& operator=(T&& t) noexcept(@\seebelow@);
+template<class T> constexpr variant& operator=(T&& t) noexcept(@\seebelow@);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -4614,7 +4616,7 @@ the \tcode{variant} object is permitted to not hold a value.
 
 \indexlibrarymember{emplace}{variant}%
 \begin{itemdecl}
-template<class T, class... Args> T& emplace(Args&&... args);
+template<class T, class... Args> constexpr T& emplace(Args&&... args);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -4634,7 +4636,8 @@ where $I$ is the zero-based index of \tcode{T} in \tcode{Types}.
 
 \indexlibrarymember{emplace}{variant}%
 \begin{itemdecl}
-template<class T, class U, class... Args> T& emplace(initializer_list<U> il, Args&&... args);
+template<class T, class U, class... Args>
+  constexpr T& emplace(initializer_list<U> il, Args&&... args);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -4655,7 +4658,7 @@ where $I$ is the zero-based index of \tcode{T} in \tcode{Types}.
 \indexlibrarymember{emplace}{variant}%
 \begin{itemdecl}
 template<size_t I, class... Args>
-  variant_alternative_t<I, variant<Types...>>& emplace(Args&&... args);
+  constexpr variant_alternative_t<I, variant<Types...>>& emplace(Args&&... args);
 \end{itemdecl}
 
 \begin{itemdescr}  % NOCHECK: order
@@ -4696,7 +4699,8 @@ the \tcode{variant} is permitted to not hold a value.
 \indexlibrarymember{emplace}{variant}%
 \begin{itemdecl}
 template<size_t I, class U, class... Args>
-  variant_alternative_t<I, variant<Types...>>& emplace(initializer_list<U> il, Args&&... args);
+  constexpr variant_alternative_t<I, variant<Types...>>&
+    emplace(initializer_list<U> il, Args&&... args);
 \end{itemdecl}
 
 \begin{itemdescr}  % NOCHECK: order
@@ -4777,7 +4781,7 @@ Otherwise, returns the zero-based index of the alternative of the contained valu
 
 \indexlibrarymember{swap}{variant}%
 \begin{itemdecl}
-void swap(variant& rhs) noexcept(@\seebelow@);
+constexpr void swap(variant& rhs) noexcept(@\seebelow@);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -5249,7 +5253,7 @@ constexpr strong_ordering operator<=>(monostate, monostate) noexcept
 \indexlibrarymember{swap}{variant}%
 \begin{itemdecl}
 template<class... Types>
-  void swap(variant<Types...>& v, variant<Types...>& w) noexcept(@\seebelow@);
+  constexpr void swap(variant<Types...>& v, variant<Types...>& w) noexcept(@\seebelow@);
 \end{itemdecl}
 
 \begin{itemdescr}
