--- a/source/utilities.tex
+++ b/source/utilities.tex
@@ -19153,18 +19153,26 @@ namespace std {
   using format_args = basic_format_args<format_context>;
   using wformat_args = basic_format_args<wformat_context>;
 
-  template<class Out, class charT>
-    using @\libglobal{format_args_t}@ = basic_format_args<basic_format_context<Out, charT>>;
+  // \ref{format.err.report}, error reporting
+  template<class charT, class... Args>
+    struct @\exposid{basic-format-string}@;
+
+  template<class... Args>
+    using @\exposid{format-string}@ =                             // exposition only
+      @\exposid{basic-format-string}@<char, type_identity_t<Args>...>;
+  template<class... Args>
+    using @\exposid{wformat-string}@ =                            // exposition only
+      @\exposid{basic-format-string}@<wchar_t, type_identity_t<Args>...>;
 
   // \ref{format.functions}, formatting functions
   template<class... Args>
-    string format(string_view fmt, const Args&... args);
+    string format(@\exposid{format-string}@<Args...> fmt, const Args&... args);
   template<class... Args>
-    wstring format(wstring_view fmt, const Args&... args);
+    wstring format(@\exposid{wformat-string}@<Args...> fmt, const Args&... args);
   template<class... Args>
-    string format(const locale& loc, string_view fmt, const Args&... args);
+    string format(const locale& loc, @\exposid{format-string}@<Args...> fmt, const Args&... args);
   template<class... Args>
-    wstring format(const locale& loc, wstring_view fmt, const Args&... args);
+    wstring format(const locale& loc, @\exposid{wformat-string}@<Args...> fmt, const Args&... args);
 
   string vformat(string_view fmt, format_args args);
   wstring vformat(wstring_view fmt, wformat_args args);
@@ -19172,26 +19180,22 @@ namespace std {
   wstring vformat(const locale& loc, wstring_view fmt, wformat_args args);
 
   template<class Out, class... Args>
-    Out format_to(Out out, string_view fmt, const Args&... args);
+    Out format_to(Out out, @\exposid{format-string}@<Args...> fmt, const Args&... args);
   template<class Out, class... Args>
-    Out format_to(Out out, wstring_view fmt, const Args&... args);
+    Out format_to(Out out, @\exposid{wformat-string}@<Args...> fmt, const Args&... args);
   template<class Out, class... Args>
-    Out format_to(Out out, const locale& loc, string_view fmt, const Args&... args);
+    Out format_to(Out out, const locale& loc, @\exposid{format-string}@<Args...> fmt, const Args&... args);
   template<class Out, class... Args>
-    Out format_to(Out out, const locale& loc, wstring_view fmt, const Args&... args);
+    Out format_to(Out out, const locale& loc, @\exposid{wformat-string}@<Args...> fmt, const Args&... args);
 
   template<class Out>
-    Out vformat_to(Out out, string_view fmt,
-                   format_args_t<type_identity_t<Out>, char> args);
+    Out vformat_to(Out out, string_view fmt, format_args, args);
   template<class Out>
-    Out vformat_to(Out out, wstring_view fmt,
-                   format_args_t<type_identity_t<Out>, wchar_t> args);
+    Out vformat_to(Out out, wstring_view fmt, wformat_args, args);
   template<class Out>
-    Out vformat_to(Out out, const locale& loc, string_view fmt,
-                   format_args_t<type_identity_t<Out>, char> args);
+    Out vformat_to(Out out, const locale& loc, string_view fmt, format_args args);
   template<class Out>
-    Out vformat_to(Out out, const locale& loc, wstring_view fmt,
-                   format_args_t<type_identity_t<Out>, wchar_t> args);
+    Out vformat_to(Out out, const locale& loc, wstring_view fmt, wformat_args args);
 
   template<class Out> struct format_to_n_result {
     Out out;
@@ -19199,27 +19203,27 @@ namespace std {
   };
   template<class Out, class... Args>
     format_to_n_result<Out> format_to_n(Out out, iter_difference_t<Out> n,
-                                        string_view fmt, const Args&... args);
+                                        @\exposid{format-string}@<Args...> fmt, const Args&... args);
   template<class Out, class... Args>
     format_to_n_result<Out> format_to_n(Out out, iter_difference_t<Out> n,
-                                        wstring_view fmt, const Args&... args);
+                                        @\exposid{wformat-string}@<Args...> fmt, const Args&... args);
   template<class Out, class... Args>
     format_to_n_result<Out> format_to_n(Out out, iter_difference_t<Out> n,
-                                        const locale& loc, string_view fmt,
+                                        const locale& loc, @\exposid{format-string}@<Args...> fmt,
                                         const Args&... args);
   template<class Out, class... Args>
     format_to_n_result<Out> format_to_n(Out out, iter_difference_t<Out> n,
-                                        const locale& loc, wstring_view fmt,
+                                        const locale& loc, @\exposid{wformat-string}@<Args...> fmt,
                                         const Args&... args);
 
   template<class... Args>
-    size_t formatted_size(string_view fmt, const Args&... args);
+    size_t formatted_size(@\exposid{format-string}@<Args...> fmt, const Args&... args);
   template<class... Args>
-    size_t formatted_size(wstring_view fmt, const Args&... args);
+    size_t formatted_size(@\exposid{wformat-string}@<Args...> fmt, const Args&... args);
   template<class... Args>
-    size_t formatted_size(const locale& loc, string_view fmt, const Args&... args);
+    size_t formatted_size(const locale& loc, @\exposid{format-string}@<Args...> fmt, const Args&... args);
   template<class... Args>
-    size_t formatted_size(const locale& loc, wstring_view fmt, const Args&... args);
+    size_t formatted_size(const locale& loc, @\exposid{wformat-string}@<Args...> fmt, const Args&... args);
 
   // \ref{format.formatter}, formatter
   template<class T, class charT = char> struct formatter;
@@ -19358,9 +19362,9 @@ mixture of automatic and manual indexing.
 string s0 = format("{} to {}",   "a", "b"); // OK, automatic indexing
 string s1 = format("{1} to {0}", "a", "b"); // OK, manual indexing
 string s2 = format("{0} to {}",  "a", "b"); // not a format string (mixing automatic and manual indexing),
-                                            // throws \tcode{format_error}
+                                            // ill-formed
 string s3 = format("{} to {1}",  "a", "b"); // not a format string (mixing automatic and manual indexing),
-                                            // throws \tcode{format_error}
+                                            // ill-formed
 \end{codeblock}
 \end{example}
 
@@ -19958,6 +19962,36 @@ They propagate exceptions thrown by operations of
 Failure to allocate storage is reported by
 throwing an exception as described in~\ref{res.on.exception.handling}.
 
+\begin{codeblock}
+template<class charT, class... Args>
+struct @\exposid{basic-format-string}@ {            // exposition only
+private:
+  basic_string_view<charT> str;         // exposition only
+public:
+  template<class T> consteval @\exposid{basic-format-string}@(const T& s);
+};
+\end{codeblock}
+
+\begin{itemdecl}
+template<class T> consteval @\exposid{basic-format-string}@(const T& s);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\constraints
+\tcode{const T\&} models \tcode{convertible_to<basic_string_view<charT>>}.
+
+\pnum
+\effects
+Direct-non-list-initializes \tcode{str} with \tcode{s}.
+
+\pnum
+\remarks
+A call to this function is not a core constant expression\iref{expr.const}
+unless there exist \tcode{args} of types \tcode{Args}
+such that \tcode{str} is a format string for \tcode{args}.
+\end{itemdescr}
+
 \rSec2[format.functions]{Formatting functions}
 
 \pnum
@@ -19969,7 +20003,7 @@ the same as in \ref{algorithms.requirements}.
 \indexlibraryglobal{format}%
 \begin{itemdecl}
 template<class... Args>
-  string format(string_view fmt, const Args&... args);
+  string format(@\exposid{format-string}@<Args...> fmt, const Args&... args);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -19977,14 +20011,14 @@ template<class... Args>
 \effects
 Equivalent to:
 \begin{codeblock}
-return vformat(fmt, make_format_args(args...));
+return vformat(fmt.str, make_format_args(args...));
 \end{codeblock}
 \end{itemdescr}
 
 \indexlibraryglobal{format}%
 \begin{itemdecl}
 template<class... Args>
-  wstring format(wstring_view fmt, const Args&... args);
+  wstring format(@\exposid{wformat-string}@<Args...> fmt, const Args&... args);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -19992,14 +20026,14 @@ template<class... Args>
 \effects
 Equivalent to:
 \begin{codeblock}
-return vformat(fmt, make_wformat_args(args...));
+return vformat(fmt.str, make_wformat_args(args...));
 \end{codeblock}
 \end{itemdescr}
 
 \indexlibraryglobal{format}%
 \begin{itemdecl}
 template<class... Args>
-  string format(const locale& loc, string_view fmt, const Args&... args);
+  string format(const locale& loc, @\exposid{format-string}@<Args...> fmt, const Args&... args);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -20007,14 +20041,14 @@ template<class... Args>
 \effects
 Equivalent to:
 \begin{codeblock}
-return vformat(loc, fmt, make_format_args(args...));
+return vformat(loc, fmt.str, make_format_args(args...));
 \end{codeblock}
 \end{itemdescr}
 
 \indexlibraryglobal{format}%
 \begin{itemdecl}
 template<class... Args>
-  wstring format(const locale& loc, wstring_view fmt, const Args&... args);
+  wstring format(const locale& loc, @\exposid{wformat-string}@<Args...> fmt, const Args&... args);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -20022,7 +20056,7 @@ template<class... Args>
 \effects
 Equivalent to:
 \begin{codeblock}
-return vformat(loc, fmt, make_wformat_args(args...));
+return vformat(loc, fmt.str, make_wformat_args(args...));
 \end{codeblock}
 \end{itemdescr}
 
@@ -20050,9 +20084,7 @@ As specified in~\ref{format.err.report}.
 \indexlibraryglobal{format_to}%
 \begin{itemdecl}
 template<class Out, class... Args>
-  Out format_to(Out out, string_view fmt, const Args&... args);
-template<class Out, class... Args>
-  Out format_to(Out out, wstring_view fmt, const Args&... args);
+  Out format_to(Out out, @\exposid{format-string}@<Args...> fmt, const Args&... args);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -20060,17 +20092,14 @@ template<class Out, class... Args>
 \effects
 Equivalent to:
 \begin{codeblock}
-using context = basic_format_context<Out, decltype(fmt)::value_type>;
-return vformat_to(out, fmt, make_format_args<context>(args...));
+return vformat_to(out, fmt.str, make_format_args(args...));
 \end{codeblock}
 \end{itemdescr}
 
 \indexlibraryglobal{format_to}%
 \begin{itemdecl}
 template<class Out, class... Args>
-  Out format_to(Out out, const locale& loc, string_view fmt, const Args&... args);
-template<class Out, class... Args>
-  Out format_to(Out out, const locale& loc, wstring_view fmt, const Args&... args);
+  Out format_to(Out out, @\exposid{wformat-string}@<Args...> fmt, const Args&... args);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -20078,25 +20107,50 @@ template<class Out, class... Args>
 \effects
 Equivalent to:
 \begin{codeblock}
-using context = basic_format_context<Out, decltype(fmt)::value_type>;
-return vformat_to(out, loc, fmt, make_format_args<context>(args...));
+return vformat_to(out, fmt.str, make_wformat_args(args...));
+\end{codeblock}
+\end{itemdescr}
+
+\indexlibraryglobal{format_to}%
+\begin{itemdecl}
+template<class Out, class... Args>
+  Out format_to(Out out, const locale& loc, @\exposid{format-string}@<Args...>  fmt, const Args&... args);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Equivalent to:
+\begin{codeblock}
+return vformat_to(out, loc, fmt.str, make_format_args(args...));
+\end{codeblock}
+\end{itemdescr}
+
+\indexlibraryglobal{format_to}%
+\begin{itemdecl}
+template<class Out, class... Args>
+  Out format_to(Out out, const locale& loc, @\exposid{wformat-string}@<Args...> fmt, const Args&... args);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Equivalent to:
+\begin{codeblock}
+return vformat_to(out, loc, fmt.str, make_wformat_args(args...));
 \end{codeblock}
 \end{itemdescr}
 
 \indexlibraryglobal{vformat_to}%
 \begin{itemdecl}
 template<class Out>
-  Out vformat_to(Out out, string_view fmt,
-                 format_args_t<type_identity_t<Out>, char> args);
+  Out vformat_to(Out out, string_view fmt, format_args args);
 template<class Out>
-  Out vformat_to(Out out, wstring_view fmt,
-                 format_args_t<type_identity_t<Out>, wchar_t> args);
+  Out vformat_to(Out out, wstring_view fmt, wformat_args args);
 template<class Out>
-  Out vformat_to(Out out, const locale& loc, string_view fmt,
-                 format_args_t<type_identity_t<Out>, char> args);
+  Out vformat_to(Out out, const locale& loc, string_view fmt, format_args args);
 template<class Out>
-  Out vformat_to(Out out, const locale& loc, wstring_view fmt,
-                 format_args_t<type_identity_t<Out>, wchar_t> args);
+  Out vformat_to(Out out, const locale& loc, wstring_view fmt, wformat_args args);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -20135,17 +20189,17 @@ As specified in~\ref{format.err.report}.
 \begin{itemdecl}
 template<class Out, class... Args>
   format_to_n_result<Out> format_to_n(Out out, iter_difference_t<Out> n,
-                                      string_view fmt, const Args&... args);
+                                      @\exposid{format-string}@<Args...> fmt, const Args&... args);
 template<class Out, class... Args>
   format_to_n_result<Out> format_to_n(Out out, iter_difference_t<Out> n,
-                                      wstring_view fmt, const Args&... args);
+                                      @\exposid{wformat-string}@<Args...> fmt, const Args&... args);
 template<class Out, class... Args>
   format_to_n_result<Out> format_to_n(Out out, iter_difference_t<Out> n,
-                                      const locale& loc, string_view fmt,
+                                      const locale& loc, @\exposid{format-string}@<Args...> fmt,
                                       const Args&... args);
 template<class Out, class... Args>
   format_to_n_result<Out> format_to_n(Out out, iter_difference_t<Out> n,
-                                      const locale& loc, wstring_view fmt,
+                                      const locale& loc, @\exposid{wformat-string}@<Args...> fmt,
                                       const Args&... args);
 \end{itemdecl}
 
@@ -20153,7 +20207,7 @@ template<class Out, class... Args>
 \pnum
 Let
 \begin{itemize}
-\item \tcode{charT} be \tcode{decltype(fmt)::value_type},
+\item \tcode{charT} be \tcode{decltype(fmt.str)::value_type},
 \item \tcode{N} be
 \tcode{formatted_size(fmt, args...)} for the functions without a \tcode{loc} parameter and
 \tcode{formatted_size(loc, fmt, args...)} for the functions with a \tcode{loc} parameter, and
@@ -20191,18 +20245,18 @@ As specified in~\ref{format.err.report}.
 \indexlibraryglobal{formatted_size}%
 \begin{itemdecl}
 template<class... Args>
-  size_t formatted_size(string_view fmt, const Args&... args);
+  size_t formatted_size(@\exposid{format-string}@<Args...> fmt, const Args&... args);
 template<class... Args>
-  size_t formatted_size(wstring_view fmt, const Args&... args);
+  size_t formatted_size(@\exposid{wformat-string}@<Args...> fmt, const Args&... args);
 template<class... Args>
-  size_t formatted_size(const locale& loc, string_view fmt, const Args&... args);
+  size_t formatted_size(const locale& loc, @\exposid{format-string}@<Args...> fmt, const Args&... args);
 template<class... Args>
-  size_t formatted_size(const locale& loc, wstring_view fmt, const Args&... args);
+  size_t formatted_size(const locale& loc, @\exposid{wformat-string}@<Args...> fmt, const Args&... args);
 \end{itemdecl}
 
 \begin{itemdescr}
 \pnum
-Let \tcode{charT} be \tcode{decltype(fmt)::value_type}.
+Let \tcode{charT} be \tcode{decltype(fmt.str)::value_type}.
 
 \pnum
 \expects
