P2325R3 Views should not be required to be default constructible
Also fixes LWG3479.

 - Conflicts addressed by assuming P2328R0 was applied.
 - Used non-propagating-cache for split_view.

--- a/source/xrefdelta.tex
+++ b/source/xrefdelta.tex
@@ -52,5 +52,8 @@
 \movedxref{forwardlist.modifiers}{forward.list.modifiers}
 \movedxref{forwardlist.ops}{forward.list.ops}
 
+% P2325R3 Views should not be required to be default constructible
+\movedxref{range.semi.wrap}{range.copy.wrap}
+
 % Deprecated features.
 %\deprxref{old.label}  (if moved to depr.old.label, otherwise use \movedxref)
