--- a/source/ranges.tex
+++ b/source/ranges.tex
@@ -165,7 +165,7 @@ namespace std::ranges {
 
   // \ref{range.iota}, iota view
   template<@\libconcept{weakly_incrementable}@ W, @\libconcept{semiregular}@ Bound = unreachable_sentinel_t>
-    requires @\exposconcept{weakly-equality-comparable-with}@<W, Bound> && @\libconcept{semiregular}@<W>
+    requires @\exposconcept{weakly-equality-comparable-with}@<W, Bound> && @\libconcept{copyable}@<W>
   class iota_view;
 
   template<class W, class Bound>
@@ -1177,7 +1177,7 @@ independent of the number of elements in the \libconcept{view}.
 \begin{itemdecl}
 template<class T>
   concept @\deflibconcept{view}@ =
-    @\libconcept{range}@<T> && @\libconcept{movable}@<T> && @\libconcept{default_initializable}@<T> && enable_view<T>;
+    @\libconcept{range}@<T> && @\libconcept{movable}@<T> && enable_view<T>;
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -1515,7 +1515,7 @@ namespace std::ranges {
     @\placeholdernc{make-unsigned-like-t}@<iter_difference_t<I>> @\exposid{size_}@ = 0;       // \expos; present only
                                                                 // when \exposid{StoreSize} is \tcode{true}
   public:
-    subrange() = default;
+    subrange() requires @\libconcept{default_initializable}@<I> = default;
 
     constexpr subrange(@\exposconcept{convertible-to-non-slicing}@<I> auto i, S s) requires (!@\exposid{StoreSize}@);
 
@@ -1950,9 +1950,9 @@ namespace std::ranges {
     requires is_object_v<T>
   class single_view : public view_interface<single_view<T>> {
   private:
-    @\placeholdernc{semiregular-box}@<T> @\exposid{value_}@;      // \expos{} (see \ref{range.semi.wrap})
+    @\placeholdernc{copyable-box}@<T> @\exposid{value_}@;      // \expos{} (see \ref{range.copy.wrap})
   public:
-    single_view() = default;
+    single_view() requires @\libconcept{default_initializable}@<T> = default;
     constexpr explicit single_view(const T& t);
     constexpr explicit single_view(T&& t);
     template<class... Args>
@@ -2091,7 +2091,7 @@ namespace std::ranges {
       @\seebelow@;
 
   template<@\libconcept{weakly_incrementable}@ W, @\libconcept{semiregular}@ Bound = unreachable_sentinel_t>
-    requires @\exposconcept{weakly-equality-comparable-with}@<W, Bound> && @\libconcept{semiregular}@<W>
+    requires @\exposconcept{weakly-equality-comparable-with}@<W, Bound> && @\libconcept{copyable}@<W>
   class iota_view : public view_interface<iota_view<W, Bound>> {
   private:
     // \ref{range.iota.iterator}, class \tcode{iota_view::\exposid{iterator}}
@@ -2101,7 +2101,7 @@ namespace std::ranges {
     W @\exposid{value_}@ = W();             // \expos
     Bound @\exposid{bound_}@ = Bound();     // \expos
   public:
-    iota_view() = default;
+    iota_view() requires @\libconcept{default_initializable}@<W> = default;
     constexpr explicit iota_view(W value);
     constexpr iota_view(type_identity_t<W> value,
                         type_identity_t<Bound> bound);
@@ -2327,7 +2327,7 @@ The expression in the \grammarterm{requires-clause} is equivalent to:
 \begin{codeblock}
 namespace std::ranges {
   template<@\libconcept{weakly_incrementable}@ W, @\libconcept{semiregular}@ Bound>
-    requires @\exposconcept{weakly-equality-comparable-with}@<W, Bound> && @\libconcept{semiregular}@<W>
+    requires @\exposconcept{weakly-equality-comparable-with}@<W, Bound> && @\libconcept{copyable}@<W>
   struct iota_view<W, Bound>::@\exposid{iterator}@ {
   private:
     W @\exposid{value_}@ = W();             // \expos
@@ -2337,7 +2337,7 @@ namespace std::ranges {
     using value_type = W;
     using difference_type = @\placeholdernc{IOTA-DIFF-T}@(W);
 
-    @\exposid{iterator}@() = default;
+    @\exposid{iterator}@() requires @\libconcept{default_initializable}@<W> = default;
     constexpr explicit @\exposid{iterator}@(W value);
 
     constexpr W operator*() const noexcept(is_nothrow_copy_constructible_v<W>);
@@ -2698,7 +2698,7 @@ if constexpr (@\exposid{is-integer-like}@<W>) {
 \begin{codeblock}
 namespace std::ranges {
   template<@\libconcept{weakly_incrementable}@ W, @\libconcept{semiregular}@ Bound>
-    requires @\exposconcept{weakly-equality-comparable-with}@<W, Bound> && @\libconcept{semiregular}@<W>
+    requires @\exposconcept{weakly-equality-comparable-with}@<W, Bound> && @\libconcept{copyable}@<W>
   struct iota_view<W, Bound>::@\exposid{sentinel}@ {
   private:
     Bound @\exposid{bound_}@ = Bound();     // \expos
@@ -2794,14 +2794,11 @@ namespace std::ranges {
              @\exposconcept{stream-extractable}@<Val, CharT, Traits>
   class basic_istream_view : public view_interface<basic_istream_view<Val, CharT, Traits>> {
   public:
-    basic_istream_view() = default;
     constexpr explicit basic_istream_view(basic_istream<CharT, Traits>& stream);
 
     constexpr auto begin()
     {
-      if (@\exposid{stream_}@) {
-        *@\exposid{stream_}@ >> @\exposid{value_}@;
-      }
+      *@\exposid{stream_}@ >> @\exposid{value_}@;
       return @\exposid{iterator}@{*this};
     }
 
@@ -2809,8 +2806,8 @@ namespace std::ranges {
 
   private:
     struct @\exposid{iterator}@;                                    // \expos
-    basic_istream<CharT, Traits>* @\exposid{stream_}@ = nullptr;    // \expos
-    Val @\exposid{value_}@ = Val();                                 // \expos
+    basic_istream<CharT, Traits>* @\exposid{stream_}@;              // \expos
+    Val @\exposid{value_}@;                                         // \expos
   };
 }
 \end{codeblock}
@@ -2863,7 +2860,6 @@ namespace std::ranges {
     using difference_type = ptrdiff_t;
     using value_type = Val;
 
-    @\exposid{iterator}@() = default;
     constexpr explicit @\exposid{iterator}@(basic_istream_view& parent) noexcept;
 
     @\exposid{iterator}@(const @\exposid{iterator}@&) = delete;
@@ -2880,7 +2876,7 @@ namespace std::ranges {
     friend bool operator==(const @\exposid{iterator}@& x, default_sentinel_t);
 
   private:
-    basic_istream_view* @\exposid{parent_}@ = nullptr;                      // \expos
+    basic_istream_view* @\exposid{parent_}@;                                // \expos
   };
 }
 \end{codeblock}
@@ -2903,10 +2899,6 @@ Initializes \exposid{parent_} with \tcode{addressof(parent)}.
 
 \begin{itemdescr}
 \pnum
-\expects
-\tcode{\exposid{parent_}->\exposid{stream_} != nullptr} is \tcode{true}.
-
-\pnum
 \effects
 Equivalent to:
 \begin{codeblock}
@@ -2922,10 +2914,6 @@ void operator++(int);
 
 \begin{itemdescr}
 \pnum
-\expects
-\tcode{\exposid{parent_}->\exposid{stream_} != nullptr} is \tcode{true}.
-
-\pnum
 \effects
 Equivalent to \tcode{++*this}.
 \end{itemdescr}
@@ -2936,10 +2924,6 @@ Val& operator*() const;
 \end{itemdecl}
 
 \begin{itemdescr}
-\pnum
-\expects
-\tcode{\exposid{parent_}->\exposid{stream_} != nullptr} is \tcode{true}.
-
 \pnum
 \effects
 Equivalent to: \tcode{return \exposid{parent_}->\exposid{value_};}
@@ -2953,7 +2937,7 @@ friend bool operator==(const @\exposid{iterator}@& x, default_sentinel_t);
 \begin{itemdescr}
 \pnum
 \effects
-Equivalent to: \tcode{return x.\exposid{parent_} == nullptr || !*x.\exposid{parent_}->\exposid{stream_};}
+Equivalent to: \tcode{return !*x.\exposid{parent_}->\exposid{stream_};}
 \end{itemdescr}
 
 \rSec1[range.adaptors]{Range adaptors}
@@ -3033,34 +3017,37 @@ range | @\placeholdernc{adaptor}@(args...)
 In this case, \tcode{\placeholdernc{adaptor}(args...)} is a range adaptor
 closure object.
 
-\rSec2[range.semi.wrap]{Semiregular wrapper}
+\rSec2[range.copy.wrap]{Copyable wrapper}
 
 \pnum
 Many types in this subclause are specified in terms of
-an exposition-only class template \exposid{semiregular-box}.
-\tcode{\exposid{semiregular-box}<T>} behaves exactly like \tcode{optional<T>}
+an exposition-only class template \exposid{copyable-box}.
+\tcode{\exposid{copyable-box}<T>} behaves exactly like \tcode{optional<T>}
 with the following differences:
 \begin{itemize}
-\item \tcode{\exposid{semiregular-box}<T>} constrains
+\item \tcode{\exposid{copyable-box}<T>} constrains
 its type parameter \tcode{T} with
 \tcode{\libconcept{copy_constructible}<T> \&\& is_object_v<T>}.
 
-\item If \tcode{T} models \libconcept{default_initializable}, the default
-constructor of \tcode{\exposid{semiregular-box}<T>} is equivalent to:
+\item The default
+constructor of \tcode{\exposid{copyable-box}<T>} is equivalent to:
 \begin{codeblock}
-constexpr @\exposid{semiregular-box}@() noexcept(is_nothrow_default_constructible_v<T>)
-  : @\exposid{semiregular-box}@{in_place}
+constexpr @\exposid{copyable-box}@() noexcept(is_nothrow_default_constructible_v<T>)
+    requires @\libconcept{default_initializable}@<T>
+  : @\exposid{copyable-box}@{in_place}
 { }
 \end{codeblock}
 
 \item If \tcode{\libconcept{copyable}<T>} is not
 modeled, the copy assignment operator is equivalent to:
 \begin{codeblock}
-@\exposid{semiregular-box}@& operator=(const @\exposid{semiregular-box}@& that)
+@\exposid{copyable-box}@& operator=(const @\exposid{copyable-box}@& that)
   noexcept(is_nothrow_copy_constructible_v<T>)
 {
-  if (that) emplace(*that);
-  else reset();
+  if (this != addressof(that)) {
+    if (that) emplace(*that);
+    else reset();
+  }
   return *this;
 }
 \end{codeblock}
@@ -3068,15 +3055,23 @@ modeled, the copy assignment operator is equivalent to:
 \item If \tcode{\libconcept{movable}<T>} is not modeled,
 the move assignment operator is equivalent to:
 \begin{codeblock}
-@\exposid{semiregular-box}@& operator=(@\exposid{semiregular-box}@&& that)
+@\exposid{copyable-box}@& operator=(@\exposid{copyable-box}@&& that)
   noexcept(is_nothrow_move_constructible_v<T>)
 {
-  if (that) emplace(std::move(*that));
-  else reset();
+  if (this != addressof(that)) {
+    if (that) emplace(std::move(*that));
+    else reset();
+  }
   return *this;
 }
 \end{codeblock}
 \end{itemize}
+
+\recommended
+\tcode{\exposid{copyable-box}<T>} should store only a \tcode{T}
+if either \tcode{T} models \libconcept{copyable} or
+\tcode{is_nothrow_move_constructible_v<T> \&\& is_nothrow_copy_constructible_v<T>}
+is \tcode{true}.
 
 \rSec2[range.all]{All view}
 
@@ -3112,10 +3107,8 @@ namespace std::ranges {
     requires is_object_v<R>
   class ref_view : public view_interface<ref_view<R>> {
   private:
-    R* @\exposid{r_}@ = nullptr;            // \expos
+    R* @\exposid{r_}@;                      // \expos
   public:
-    constexpr ref_view() noexcept = default;
-
     template<@\exposconcept{different-from}@<ref_view> T>
       requires @\seebelow@
     constexpr ref_view(T&& t);
@@ -3205,7 +3198,7 @@ namespace std::ranges {
   class filter_view : public view_interface<filter_view<V, Pred>> {
   private:
     V @\exposid{base_}@ = V();                      // \expos
-    @\placeholdernc{semiregular-box}@<Pred> @\exposid{pred_}@;  // \expos
+    @\placeholdernc{copyable-box}@<Pred> @\exposid{pred_}@;     // \expos
 
     // \ref{range.filter.iterator}, class \tcode{filter_view::\exposid{iterator}}
     class @\exposid{iterator}@;                     // \expos
@@ -3213,7 +3206,7 @@ namespace std::ranges {
     class @\exposid{sentinel}@;                     // \expos
 
   public:
-    filter_view() = default;
+    filter_view() requires @\libconcept{default_initializable}@<V> && @\libconcept{default_initializable}@<Pred> = default;
     constexpr filter_view(V base, Pred pred);
 
     constexpr V base() const& requires @\libconcept{copy_constructible}@<V> { return @\exposid{base_}@; }
@@ -3298,7 +3291,7 @@ namespace std::ranges {
     using value_type        = range_value_t<V>;
     using difference_type   = range_difference_t<V>;
 
-    @\exposid{iterator}@() = default;
+    @\exposid{iterator}@() requires @\libconcept{default_initializable}@<iterator_t<V>> = default;
     constexpr @\exposid{iterator}@(filter_view& parent, iterator_t<V> current);
 
     constexpr iterator_t<V> base() const &
@@ -3635,10 +3628,10 @@ namespace std::ranges {
     template<bool> struct @\exposid{sentinel}@;             // \expos
 
     V @\exposid{base_}@ = V();                              // \expos
-    @\placeholdernc{semiregular-box}@<F> @\exposid{fun_}@;                    // \expos
+    @\placeholdernc{copyable-box}@<F> @\exposid{fun_}@;                       // \expos
 
   public:
-    transform_view() = default;
+    transform_view() requires @\libconcept{default_initializable}@<V> && @\libconcept{default_initializable}@<F> = default;
     constexpr transform_view(V base, F fun);
 
     constexpr V base() const& requires @\libconcept{copy_constructible}@<V> { return @\exposid{base_}@; }
@@ -3793,7 +3786,7 @@ namespace std::ranges {
       remove_cvref_t<invoke_result_t<F&, range_reference_t<@\exposid{Base}@>>>;
     using difference_type   = range_difference_t<@\exposid{Base}@>;
 
-    @\exposid{iterator}@() = default;
+    @\exposid{iterator}@() requires @\libconcept{default_initializable}@<iterator_t<@\exposid{Base}@>> = default;
     constexpr @\exposid{iterator}@(@\exposid{Parent}@& parent, iterator_t<@\exposid{Base}@> current);
     constexpr @\exposid{iterator}@(@\exposid{iterator}@<!Const> i)
       requires Const && @\libconcept{convertible_to}@<iterator_t<V>, iterator_t<@\exposid{Base}@>>;
@@ -4363,7 +4356,7 @@ namespace std::ranges {
     // \ref{range.take.sentinel}, class template \tcode{take_view::\exposid{sentinel}}
     template<bool> struct @\exposid{sentinel}@;                     // \expos
   public:
-    take_view() = default;
+    take_view() requires @\libconcept{default_initializable}@<V> = default;
     constexpr take_view(V base, range_difference_t<V> count);
 
     constexpr V base() const& requires @\libconcept{copy_constructible}@<V> { return @\exposid{base_}@; }
@@ -4571,10 +4564,10 @@ namespace std::ranges {
     template<bool> class @\exposid{sentinel}@;                      // \expos
 
     V @\exposid{base_}@ = V();                                      // \expos
-    @\placeholder{semiregular-box}@<Pred> @\exposid{pred_}@; @\itcorr[-1]@                       // \expos
+    @\placeholder{copyable-box}@<Pred> @\exposid{pred_}@; @\itcorr[-1]@                          // \expos
 
   public:
-    take_while_view() = default;
+    take_while_view() requires @\libconcept{default_initializable}@<V> && @\libconcept{default_initializable}@<Pred> = default;
     constexpr take_while_view(V base, Pred pred);
 
     constexpr V base() const& requires @\libconcept{copy_constructible}@<V> { return @\exposid{base_}@; }
@@ -4767,7 +4760,7 @@ namespace std::ranges {
   template<@\libconcept{view}@ V>
   class drop_view : public view_interface<drop_view<V>> {
   public:
-    drop_view() = default;
+    drop_view() requires @\libconcept{default_initializable}@<V> = default;
     constexpr drop_view(V base, range_difference_t<V> count);
 
     constexpr V base() const& requires @\libconcept{copy_constructible}@<V> { return @\exposid{base_}@; }
@@ -4897,7 +4890,7 @@ namespace std::ranges {
              @\libconcept{indirect_unary_predicate}@<const Pred, iterator_t<V>>
   class drop_while_view : public view_interface<drop_while_view<V, Pred>> {
   public:
-    drop_while_view() = default;
+    drop_while_view() requires @\libconcept{default_initializable}@<V> && @\libconcept{default_initializable}@<Pred> = default;
     constexpr drop_while_view(V base, Pred pred);
 
     constexpr V base() const& requires @\libconcept{copy_constructible}@<V> { return @\exposid{base_}@; }
@@ -4912,7 +4905,7 @@ namespace std::ranges {
 
   private:
     V @\exposid{base_}@ = V();                                      // \expos
-    @\placeholder{semiregular-box}@<Pred> @\exposid{pred_}@; @\itcorr[-1]@                       // \expos
+    @\placeholder{copyable-box}@<Pred> @\exposid{pred_}@; @\itcorr[-1]@                          // \expos
   };
 
   template<class R, class Pred>
@@ -5024,7 +5017,7 @@ namespace std::ranges {
     views::all_t<@\exposid{InnerRng}@> @\exposid{inner_}@ =     // \expos, present only when \tcode{!is_reference_v<\exposid{InnerRng}>}
       views::all_t<@\exposid{InnerRng}@>();
   public:
-    join_view() = default;
+    join_view() requires @\libconcept{default_initializable}@<V> = default;
     constexpr explicit join_view(V base);
 
     constexpr V base() const& requires @\libconcept{copy_constructible}@<V> { return @\exposid{base_}@; }
@@ -5112,7 +5105,8 @@ namespace std::ranges {
     using value_type        = range_value_t<range_reference_t<@\exposid{Base}@>>;
     using difference_type   = @\seebelow@;
 
-    @\exposid{iterator}@() = default;
+    @\exposid{iterator}@() requires @\libconcept{default_initializable}@<@\exposid{OuterIter}@> &&
+                         @\itcorr[-2]\libconcept{default_initializable}@<@\exposid{InnerIter}@> = default;
     constexpr @\exposid{iterator}@(@\exposid{Parent}@& parent, @\exposid{OuterIter}@ outer);
     constexpr @\exposid{iterator}@(@\exposid{iterator}@<!Const> i)
       requires Const &&
@@ -5515,13 +5509,13 @@ namespace std::ranges {
   private:
     V @\exposid{base_}@ = V();                              // \expos
     Pattern @\exposid{pattern_}@ = Pattern();               // \expos
-    iterator_t<V> @\exposid{current_}@ = iterator_t<V>();   // \expos, present only if \tcode{!\libconcept{forward_range}<V>}
+    @\exposid{non-propagating-cache}@<iterator_t<V>> @\exposid{current_}@; // \expos, present only if \tcode{!\libconcept{forward_range}<V>}
     // \ref{range.split.outer}, class template \tcode{split_view::\exposid{outer-iterator}}
     template<bool> struct @\exposid{outer-iterator}@;       // \expos
     // \ref{range.split.inner}, class template \tcode{split_view::\exposid{inner-iterator}}
     template<bool> struct @\exposid{inner-iterator}@;       // \expos
   public:
-    split_view() = default;
+    split_view() requires @\libconcept{default_initializable}@<V> && @\libconcept{default_initializable}@<Pattern> = default;
     constexpr split_view(V base, Pattern pattern);
 
     template<@\libconcept{input_range}@ R>
@@ -5650,7 +5644,7 @@ namespace std::ranges {
 Many of the specifications in \ref{range.split} refer to the notional member
 \placeholder{current} of \exposid{outer-iterator}.
 \placeholder{current} is equivalent to \exposid{current_} if \tcode{V}
-models \libconcept{forward_range}, and \tcode{\exposid{parent_}->\exposid{current_}} otherwise.
+models \libconcept{forward_range}, and \tcode{*\exposid{parent_}->\exposid{current_}} otherwise.
 
 \indexlibraryctor{split_view::\exposid{outer-iterator}}%
 \begin{itemdecl}
@@ -6079,7 +6073,7 @@ namespace std::ranges {
   private:
     V @\exposid{base_}@ = V();  // \expos
   public:
-    common_view() = default;
+    common_view() requires @\libconcept{default_initializable}@<V> = default;
 
     constexpr explicit common_view(V r);
 
@@ -6201,7 +6195,7 @@ namespace std::ranges {
   private:
     V @\exposid{base_}@ = V();  // \expos
   public:
-    reverse_view() = default;
+    reverse_view() requires @\libconcept{default_initializable}@<V> = default;
 
     constexpr explicit reverse_view(V r);
 
@@ -6373,7 +6367,7 @@ namespace std::ranges {
              @\exposconcept{returnable-element}@<range_reference_t<V>, N>
   class elements_view : public view_interface<elements_view<V, N>> {
   public:
-    elements_view() = default;
+    elements_view() requires @\libconcept{default_initializable}@<V> = default;
     constexpr explicit elements_view(V base);
 
     constexpr V base() const& requires @\libconcept{copy_constructible}@<V> { return @\exposid{base_}@; }
@@ -6447,7 +6441,7 @@ namespace std::ranges {
     using value_type = remove_cvref_t<tuple_element_t<N, range_value_t<@\exposid{Base}@>>>;
     using difference_type = range_difference_t<@\exposid{Base}@>;
 
-    @\exposid{iterator}@() = default;
+    @\exposid{iterator}@() requires @\libconcept{default_initializable}@<iterator_t<@\exposid{Base}@>> = default;
     constexpr explicit @\exposid{iterator}@(iterator_t<@\exposid{Base}@> current);
     constexpr @\exposid{iterator}@(@\exposid{iterator}@<!Const> i)
       requires Const && @\libconcept{convertible_to}@<iterator_t<V>, iterator_t<@\exposid{Base}@>>;
