P2210R2 Superior String Splitting
Also fixes LWG3478.

--- a/source/xrefdelta.tex
+++ b/source/xrefdelta.tex
@@ -52,5 +52,10 @@
 \movedxref{forwardlist.modifiers}{forward.list.modifiers}
 \movedxref{forwardlist.ops}{forward.list.ops}
 
+% P2210R2 Superior String Splitting
+\movedxref{range.split.outer}{range.lazy.split.outer}
+\movedxref{range.split.outer.value}{range.lazy.split.outer.value}
+\movedxref{range.split.inner}{range.lazy.split.inner}
+
 % Deprecated features.
 %\deprxref{old.label}  (if moved to depr.old.label, otherwise use \movedxref)
