--- a/source/ranges.tex
+++ b/source/ranges.tex
@@ -257,7 +257,7 @@ namespace std::ranges {
 
   namespace views { inline constexpr @\unspec@ join = @\unspec@; }
 
-  // \ref{range.split}, split view
+  // \ref{range.lazy.split}, lazy split view
   template<class R>
     concept @\exposconcept{tiny-range}@ = @\seebelow@;   // \expos
 
@@ -265,9 +265,18 @@ namespace std::ranges {
     requires @\libconcept{view}@<V> && @\libconcept{view}@<Pattern> &&
              @\libconcept{indirectly_comparable}@<iterator_t<V>, iterator_t<Pattern>, ranges::equal_to> &&
              (@\libconcept{forward_range}@<V> || @\exposconcept{tiny-range}@<Pattern>)
+  class lazy_split_view;
+
+  // \ref{range.split}, split view
+ template<@\libconcept{forward_range}@ V, @\libconcept{forward_range}@ Pattern>
+   requires @\libconcept{view}@<V> && @\libconcept{view}@<Pattern> &&
+            @\libconcept{indirectly_comparable}@<iterator_t<V>, iterator_t<Pattern>, ranges::equal_to>
   class split_view;
 
-  namespace views { inline constexpr @\unspec@ split = @\unspec@; }
+  namespace views {
+    inline constexpr @\unspec@ lazy_split = @\unspec@;
+    inline constexpr @\unspec@ split = @\unspec@;
+  }
 
   // \ref{range.counted}, counted view
   namespace views { inline constexpr @\unspec@ counted = @\unspec@; }
@@ -5460,28 +5469,28 @@ friend constexpr bool operator==(const @\exposid{iterator}@<OtherConst>& x, cons
 Equivalent to: \tcode{return x.\exposid{outer_} == y.\exposid{end_};}
 \end{itemdescr}
 
-\rSec2[range.split]{Split view}
+\rSec2[range.lazy.split]{Lazy split view}
 
-\rSec3[range.split.overview]{Overview}
+\rSec3[range.lazy.split.overview]{Overview}
 
 \pnum
-\tcode{split_view} takes a \libconcept{view} and a delimiter, and splits
+\tcode{lazy_split_view} takes a \libconcept{view} and a delimiter, and splits
 the \libconcept{view} into subranges on the delimiter. The delimiter can be
 a single element or a \libconcept{view} of elements.
 
 \pnum
-\indexlibrarymember{split}{views}%
-The name \tcode{views::split} denotes a
+\indexlibrarymember{lazy_split}{views}%
+The name \tcode{views::lazy_split} denotes a
 range adaptor object\iref{range.adaptor.object}.
 Given subexpressions \tcode{E} and \tcode{F},
-the expression \tcode{views::split(E, F)} is expression-equivalent to
-\tcode{split_view\{E, F\}}.
+the expression \tcode{views::lazy_split(E, F)} is expression-equivalent to
+\tcode{lazy_split_view\{E, F\}}.
 
 \pnum
 \begin{example}
 \begin{codeblock}
 string str{"the quick brown fox"};
-split_view sentence{str, ' '};
+lazy_split_view sentence{str, ' '};
 for (auto word : sentence) {
   for (char ch : word)
     cout << ch;
@@ -5491,12 +5500,12 @@ for (auto word : sentence) {
 \end{codeblock}
 \end{example}
 
-\rSec3[range.split.view]{Class template \tcode{split_view}}
+\rSec3[range.lazy.split.view]{Class template \tcode{lazy_split_view}}
 
-\indexlibraryglobal{split_view}%
-\indexlibrarymember{base}{split_view}%
-\indexlibrarymember{begin}{split_view}%
-\indexlibrarymember{end}{split_view}%
+\indexlibraryglobal{lazy_split_view}%
+\indexlibrarymember{base}{lazy_split_view}%
+\indexlibrarymember{begin}{lazy_split_view}%
+\indexlibrarymember{end}{lazy_split_view}%
 \begin{codeblock}
 namespace std::ranges {
   template<auto> struct @\exposid{require-constant}@;       // \expos
@@ -5511,23 +5520,23 @@ namespace std::ranges {
     requires @\libconcept{view}@<V> && @\libconcept{view}@<Pattern> &&
              @\libconcept{indirectly_comparable}@<iterator_t<V>, iterator_t<Pattern>, ranges::equal_to> &&
              (@\libconcept{forward_range}@<V> || @\exposconcept{tiny-range}@<Pattern>)
-  class split_view : public view_interface<split_view<V, Pattern>> {
+  class lazy_split_view : public view_interface<lazy_split_view<V, Pattern>> {
   private:
     V @\exposid{base_}@ = V();                              // \expos
     Pattern @\exposid{pattern_}@ = Pattern();               // \expos
     iterator_t<V> @\exposid{current_}@ = iterator_t<V>();   // \expos, present only if \tcode{!\libconcept{forward_range}<V>}
-    // \ref{range.split.outer}, class template \tcode{split_view::\exposid{outer-iterator}}
+    // \ref{range.lazy.split.outer}, class template \tcode{lazy_split_view::\exposid{outer-iterator}}
     template<bool> struct @\exposid{outer-iterator}@;       // \expos
-    // \ref{range.split.inner}, class template \tcode{split_view::\exposid{inner-iterator}}
+    // \ref{range.lazy.split.inner}, class template \tcode{lazy_split_view::\exposid{inner-iterator}}
     template<bool> struct @\exposid{inner-iterator}@;       // \expos
   public:
-    split_view() = default;
-    constexpr split_view(V base, Pattern pattern);
+    lazy_split_view() = default;
+    constexpr lazy_split_view(V base, Pattern pattern);
 
     template<@\libconcept{input_range}@ R>
       requires @\libconcept{constructible_from}@<V, views::all_t<R>> &&
                @\libconcept{constructible_from}@<Pattern, single_view<range_value_t<R>>>
-    constexpr split_view(R&& r, range_value_t<R> e);
+    constexpr lazy_split_view(R&& r, range_value_t<R> e);
 
     constexpr V base() const& requires @\libconcept{copy_constructible}@<V> { return @\exposid{base_}@; }
     constexpr V base() && { return std::move(@\exposid{base_}@); }
@@ -5558,17 +5567,17 @@ namespace std::ranges {
   };
 
   template<class R, class P>
-    split_view(R&&, P&&) -> split_view<views::all_t<R>, views::all_t<P>>;
+    lazy_split_view(R&&, P&&) -> lazy_split_view<views::all_t<R>, views::all_t<P>>;
 
   template<@\libconcept{input_range}@ R>
-    split_view(R&&, range_value_t<R>)
-      -> split_view<views::all_t<R>, single_view<range_value_t<R>>>;
+    lazy_split_view(R&&, range_value_t<R>)
+      -> lazy_split_view<views::all_t<R>, single_view<range_value_t<R>>>;
 }
 \end{codeblock}
 
-\indexlibraryctor{split_view}%
+\indexlibraryctor{lazy_split_view}%
 \begin{itemdecl}
-constexpr split_view(V base, Pattern pattern);
+constexpr lazy_split_view(V base, Pattern pattern);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -5578,12 +5587,12 @@ Initializes \exposid{base_} with \tcode{std::move(base)}, and
 \exposid{pattern_} with \tcode{std::move(pattern)}.
 \end{itemdescr}
 
-\indexlibraryctor{split_view}%
+\indexlibraryctor{lazy_split_view}%
 \begin{itemdecl}
 template<@\libconcept{input_range}@ R>
   requires @\libconcept{constructible_from}@<V, views::all_t<R>> &&
            @\libconcept{constructible_from}@<Pattern, single_view<range_value_t<R>>>
-constexpr split_view(R&& r, range_value_t<R> e);
+constexpr lazy_split_view(R&& r, range_value_t<R> e);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -5593,9 +5602,9 @@ Initializes \exposid{base_} with \tcode{views::all(std::forward<R>(r))}, and
 \exposid{pattern_} with \tcode{single_view\{\brk{}std::move(e)\}}.
 \end{itemdescr}
 
-\rSec3[range.split.outer]{Class template \tcode{split_view::\exposid{outer-iterator}}}
+\rSec3[range.lazy.split.outer]{Class template \tcode{lazy_split_view::\exposid{outer-iterator}}}
 
-\indexlibraryglobal{split_view::\exposid{outer-iterator}}%
+\indexlibraryglobal{lazy_split_view::\exposid{outer-iterator}}%
 \begin{codeblock}
 namespace std::ranges {
   template<@\libconcept{input_range}@ V, @\libconcept{forward_range}@ Pattern>
@@ -5603,18 +5612,19 @@ namespace std::ranges {
              @\libconcept{indirectly_comparable}@<iterator_t<V>, iterator_t<Pattern>, ranges::equal_to> &&
              (@\libconcept{forward_range}@<V> || @\exposconcept{tiny-range}@<Pattern>)
   template<bool Const>
-  struct split_view<V, Pattern>::@\exposid{outer-iterator}@ {
+  struct lazy_split_view<V, Pattern>::@\exposid{outer-iterator}@ {
   private:
-    using @\exposid{Parent}@ = @\exposid{maybe-const}@<Const, split_view>;      // \expos
+    using @\exposid{Parent}@ = @\exposid{maybe-const}@<Const, lazy_split_view>;      // \expos
     using @\exposid{Base}@ = @\exposid{maybe-const}@<Const, V>;                 // \expos
     @\exposid{Parent}@* @\exposid{parent_}@ = nullptr;                          // \expos
     iterator_t<@\exposid{Base}@> @\exposid{current_}@ = iterator_t<@\exposid{Base}@>();     // \expos, present only if \tcode{V} models \libconcept{forward_range}
+    bool @\exposid{trailing_empty_}@ = false;                       // \expos
 
   public:
     using iterator_concept  =
       conditional_t<@\libconcept{forward_range}@<@\exposid{Base}@>, forward_iterator_tag, input_iterator_tag>;
     using iterator_category = input_iterator_tag;       // present only if \exposid{Base} models \libconcept{forward_range}
-    // \ref{range.split.outer.value}, class \tcode{split_view::\exposid{outer-iterator}::value_type}
+    // \ref{range.lazy.split.outer.value}, class \tcode{lazy_split_view::\exposid{outer-iterator}::value_type}
     struct value_type;
     using difference_type   = range_difference_t<@\exposid{Base}@>;
 
@@ -5647,12 +5657,12 @@ namespace std::ranges {
 \end{codeblock}
 
 \pnum
-Many of the specifications in \ref{range.split} refer to the notional member
+Many of the specifications in \ref{range.lazy.split} refer to the notional member
 \placeholder{current} of \exposid{outer-iterator}.
 \placeholder{current} is equivalent to \exposid{current_} if \tcode{V}
 models \libconcept{forward_range}, and \tcode{\exposid{parent_}->\exposid{current_}} otherwise.
 
-\indexlibraryctor{split_view::\exposid{outer-iterator}}%
+\indexlibraryctor{lazy_split_view::\exposid{outer-iterator}}%
 \begin{itemdecl}
 constexpr explicit @\exposid{outer-iterator}@(@\exposid{Parent}@& parent)
   requires (!@\libconcept{forward_range}@<@\exposid{Base}@>);
@@ -5664,7 +5674,7 @@ constexpr explicit @\exposid{outer-iterator}@(@\exposid{Parent}@& parent)
 Initializes \exposid{parent_} with \tcode{addressof(parent)}.
 \end{itemdescr}
 
-\indexlibraryctor{split_view::\exposid{outer-iterator}}%
+\indexlibraryctor{lazy_split_view::\exposid{outer-iterator}}%
 \begin{itemdecl}
 constexpr @\exposid{outer-iterator}@(@\exposid{Parent}@& parent, iterator_t<@\exposid{Base}@> current)
   requires @\libconcept{forward_range}@<@\exposid{Base}@>;
@@ -5677,7 +5687,7 @@ Initializes \exposid{parent_} with \tcode{addressof(parent)}
 and \exposid{current_} with \tcode{std::move(current)}.
 \end{itemdescr}
 
-\indexlibraryctor{split_view::\exposid{outer-iterator}}%
+\indexlibraryctor{lazy_split_view::\exposid{outer-iterator}}%
 \begin{itemdecl}
 constexpr @\exposid{outer-iterator}@(@\exposid{outer-iterator}@<!Const> i)
   requires Const && @\libconcept{convertible_to}@<iterator_t<V>, iterator_t<@\exposid{Base}@>>;
@@ -5690,7 +5700,7 @@ Initializes \exposid{parent_} with \tcode{i.\exposid{parent_}} and
 \exposid{current_} with \tcode{std::move(i.\exposid{current_})}.
 \end{itemdescr}
 
-\indexlibrarymember{operator*}{split_view::\exposid{outer-iterator}}%
+\indexlibrarymember{operator*}{lazy_split_view::\exposid{outer-iterator}}%
 \begin{itemdecl}
 constexpr value_type operator*() const;
 \end{itemdecl}
@@ -5701,7 +5711,7 @@ constexpr value_type operator*() const;
 Equivalent to: \tcode{return value_type\{*this\};}
 \end{itemdescr}
 
-\indexlibrarymember{operator++}{split_view::\exposid{outer-iterator}}%
+\indexlibrarymember{operator++}{lazy_split_view::\exposid{outer-iterator}}%
 \begin{itemdecl}
 constexpr @\exposid{outer-iterator}@& operator++();
 \end{itemdecl}
@@ -5712,13 +5722,18 @@ constexpr @\exposid{outer-iterator}@& operator++();
 Equivalent to:
 \begin{codeblock}
 const auto end = ranges::end(@\exposid{parent_}@->@\exposid{base_}@);
-if (@\placeholder{current}@ == end) return *this;
+if (@\placeholder{current}@ == end) {
+  @\exposid{trailing_empty_}@ = false;
+  return *this;
+}
 const auto [pbegin, pend] = subrange{@\exposid{parent_}@->@\exposid{pattern_}@};
 if (pbegin == pend) ++@\placeholder{current}@;
 else if constexpr (@\exposconcept{tiny-range}@<Pattern>) {
   @\placeholder{current}@ = ranges::find(std::move(@\placeholder{current}@), end, *pbegin);
   if (@\placeholder{current}@ != end) {
     ++@\placeholder{current}@;
+    if (@\placeholder{current}@ == end)
+      @\exposid{trailing_empty_}@ = true;
   }
 }
 else {
@@ -5726,6 +5741,8 @@ else {
     auto [b, p] = ranges::mismatch(@\placeholder{current}@, end, pbegin, pend);
     if (p == pend) {
       @\placeholder{current}@ = b;
+      if (@\placeholder{current}@ == end)
+        @\exposid{trailing_empty_}@ = true;
       break;            // The pattern matched; skip it
     }
   } while (++@\placeholder{current}@ != end);
@@ -5734,7 +5751,7 @@ return *this;
 \end{codeblock}
 \end{itemdescr}
 
-\indexlibrarymember{operator==}{split_view::\exposid{outer-iterator}}%
+\indexlibrarymember{operator==}{lazy_split_view::\exposid{outer-iterator}}%
 \begin{itemdecl}
 friend constexpr bool operator==(const @\exposid{outer-iterator}@& x, const @\exposid{outer-iterator}@& y)
   requires @\libconcept{forward_range}@<@\exposid{Base}@>;
@@ -5743,10 +5760,13 @@ friend constexpr bool operator==(const @\exposid{outer-iterator}@& x, const @\ex
 \begin{itemdescr}
 \pnum
 \effects
-Equivalent to: \tcode{return x.\exposid{current_} == y.\exposid{current_};}
+Equivalent to:
+\begin{codeblock}
+return x.@\exposid{current_}@ == y.@\exposid{current_}@ && x.@\exposid{trailing_empty_}@ == y.@\exposid{trailing_empty_}@;
+\end{codeblock}
 \end{itemdescr}
 
-\indexlibrarymember{operator==}{split_view::\exposid{outer-iterator}}%
+\indexlibrarymember{operator==}{lazy_split_view::\exposid{outer-iterator}}%
 \begin{itemdecl}
 friend constexpr bool operator==(const @\exposid{outer-iterator}@& x, default_sentinel_t);
 \end{itemdecl}
@@ -5754,12 +5774,15 @@ friend constexpr bool operator==(const @\exposid{outer-iterator}@& x, default_se
 \begin{itemdescr}
 \pnum
 \effects
-Equivalent to: \tcode{return x.\placeholdernc{current} == ranges::end(x.\exposid{parent_}->\exposid{base_});}
+Equivalent to:
+\begin{codeblock}
+return x.@\placeholdernc{current}@ == ranges::end(x.@\exposid{parent_}@->@\exposid{base_}@) && !x.@\exposid{trailing_empty_}@;
+\end{codeblock}
 \end{itemdescr}
 
-\rSec3[range.split.outer.value]{Class \tcode{split_view::\exposid{outer-iterator}::value_type}}
+\rSec3[range.lazy.split.outer.value]{Class \tcode{lazy_split_view::\exposid{outer-iterator}::value_type}}
 
-\indexlibraryglobal{split_view::\exposid{outer-iterator}::value_type}%
+\indexlibraryglobal{lazy_split_view::\exposid{outer-iterator}::value_type}%
 \begin{codeblock}
 namespace std::ranges {
   template<@\libconcept{input_range}@ V, @\libconcept{forward_range}@ Pattern>
@@ -5767,7 +5790,7 @@ namespace std::ranges {
              @\libconcept{indirectly_comparable}@<iterator_t<V>, iterator_t<Pattern>, ranges::equal_to> &&
              (@\libconcept{forward_range}@<V> || @\exposconcept{tiny-range}@<Pattern>)
   template<bool Const>
-  struct split_view<V, Pattern>::@\exposid{outer-iterator}@<Const>::value_type
+  struct lazy_split_view<V, Pattern>::@\exposid{outer-iterator}@<Const>::value_type
     : view_interface<value_type> {
   private:
     @\exposid{outer-iterator}@ @\exposid{i_}@ = @\exposid{outer-iterator}@();               // \expos
@@ -5782,7 +5805,7 @@ namespace std::ranges {
 }
 \end{codeblock}
 
-\indexlibraryctor{split_view::\exposid{outer-iterator}::value_type}%
+\indexlibraryctor{lazy_split_view::\exposid{outer-iterator}::value_type}%
 \begin{itemdecl}
 constexpr explicit value_type(@\exposid{outer-iterator}@ i);
 \end{itemdecl}
@@ -5793,7 +5816,7 @@ constexpr explicit value_type(@\exposid{outer-iterator}@ i);
 Initializes \exposid{i_} with \tcode{std::move(i)}.
 \end{itemdescr}
 
-\indexlibrarymember{begin}{split_view::\exposid{outer-iterator}::value_type}%
+\indexlibrarymember{begin}{lazy_split_view::\exposid{outer-iterator}::value_type}%
 \begin{itemdecl}
 constexpr @\exposid{inner-iterator}@<Const> begin() const requires @\libconcept{copyable}@<@\exposid{outer-iterator}@>;
 \end{itemdecl}
@@ -5804,7 +5827,7 @@ constexpr @\exposid{inner-iterator}@<Const> begin() const requires @\libconcept{
 Equivalent to: \tcode{return \exposid{inner-iterator}<Const>\{\exposid{i_}\};}
 \end{itemdescr}
 
-\indexlibrarymember{begin}{split_view::\exposid{outer-iterator}::value_type}%
+\indexlibrarymember{begin}{lazy_split_view::\exposid{outer-iterator}::value_type}%
 \begin{itemdecl}
 constexpr @\exposid{inner-iterator}@<Const> begin() requires (!@\libconcept{copyable}@<@\exposid{outer-iterator}@>);
 \end{itemdecl}
@@ -5814,7 +5837,7 @@ constexpr @\exposid{inner-iterator}@<Const> begin() requires (!@\libconcept{copy
 \effects
 Equivalent to: \tcode{return \exposid{inner-iterator}<Const>\{std::move(\exposid{i_})\};}
 \end{itemdescr}
-\indexlibrarymember{end}{split_view::\exposid{outer-iterator}::value_type}%
+\indexlibrarymember{end}{lazy_split_view::\exposid{outer-iterator}::value_type}%
 \begin{itemdecl}
 constexpr default_sentinel_t end() const;
 \end{itemdecl}
@@ -5825,9 +5848,9 @@ constexpr default_sentinel_t end() const;
 Equivalent to: \tcode{return default_sentinel;}
 \end{itemdescr}
 
-\rSec3[range.split.inner]{Class template \tcode{split_view::\exposid{inner-iterator}}}
+\rSec3[range.lazy.split.inner]{Class template \tcode{lazy_split_view::\exposid{inner-iterator}}}
 
-\indexlibraryglobal{split_view::\exposid{inner-iterator}}%
+\indexlibraryglobal{lazy_split_view::\exposid{inner-iterator}}%
 \begin{codeblock}
 namespace std::ranges {
   template<@\libconcept{input_range}@ V, @\libconcept{forward_range}@ Pattern>
@@ -5835,7 +5858,7 @@ namespace std::ranges {
              @\libconcept{indirectly_comparable}@<iterator_t<V>, iterator_t<Pattern>, ranges::equal_to> &&
              (@\libconcept{forward_range}@<V> || @\exposconcept{tiny-range}@<Pattern>)
   template<bool Const>
-  struct split_view<V, Pattern>::@\exposid{inner-iterator}@ {
+  struct lazy_split_view<V, Pattern>::@\exposid{inner-iterator}@ {
   private:
     using @\exposid{Base}@ = @\exposid{maybe-const}@<Const, V>;                 // \expos
     @\exposid{outer-iterator}@<Const> @\exposid{i_}@ = @\exposid{outer-iterator}@<Const>(); // \expos
@@ -5848,6 +5871,10 @@ namespace std::ranges {
 
     @\exposid{inner-iterator}@() = default;
     constexpr explicit @\exposid{inner-iterator}@(@\exposid{outer-iterator}@<Const> i);
+
+    constexpr iterator_t<@\exposid{Base}@> base() const&
+      requires @\libconcept{copyable}@<iterator_t<@\exposid{Base}@>>;
+    constexpr iterator_t<@\exposid{Base}@> base() &&;
 
     constexpr decltype(auto) operator*() const { return *@\exposid{i_}@.@\placeholder{current}@; }
 
@@ -5890,7 +5917,7 @@ Otherwise, the \grammarterm{typedef-name} \tcode{iterator_category} denotes:
 \item otherwise, \tcode{iterator_traits<iterator_t<\exposid{Base}>>::iterator_category}.
 \end{itemize}
 
-\indexlibraryctor{split_view::\exposid{inner-iterator}}%
+\indexlibraryctor{lazy_split_view::\exposid{inner-iterator}}%
 \begin{itemdecl}
 constexpr explicit @\exposid{inner-iterator}@(@\exposid{outer-iterator}@<Const> i);
 \end{itemdecl}
@@ -5901,7 +5928,30 @@ constexpr explicit @\exposid{inner-iterator}@(@\exposid{outer-iterator}@<Const> 
 Initializes \exposid{i_} with \tcode{std::move(i)}.
 \end{itemdescr}
 
-\indexlibrarymember{operator++}{split_view::\exposid{inner-iterator}}%
+\indexlibrarymember{base}{lazy_split_view::\exposid{inner-iterator}}%
+\begin{itemdecl}
+constexpr iterator_t<@\exposid{Base}@> base() const&
+  requires @\libconcept{copyable}@<iterator_t<@\exposid{Base}@>>;
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Equivalent to: \tcode{return \exposid{i_}.\placeholder{current};}
+\end{itemdescr}
+
+\indexlibrarymember{base}{lazy_split_view::\exposid{inner-iterator}}%
+\begin{itemdecl}
+constexpr iterator_t<@\exposid{Base}@> base() &&;
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Equivalent to: \tcode{return std::move(\exposid{i_}.\placeholder{current});}
+\end{itemdescr}
+
+\indexlibrarymember{operator++}{lazy_split_view::\exposid{inner-iterator}}%
 \begin{itemdecl}
 constexpr @\exposid{inner-iterator}@& operator++();
 \end{itemdecl}
@@ -5922,7 +5972,7 @@ return *this;
 \end{codeblock}
 \end{itemdescr}
 
-\indexlibrarymember{operator==}{split_view::\exposid{inner-iterator}}%
+\indexlibrarymember{operator==}{lazy_split_view::\exposid{inner-iterator}}%
 \begin{itemdecl}
 friend constexpr bool operator==(const @\exposid{inner-iterator}@& x, const @\exposid{inner-iterator}@& y)
   requires @\libconcept{forward_range}@<@\exposid{Base}@>;
@@ -5934,7 +5984,7 @@ friend constexpr bool operator==(const @\exposid{inner-iterator}@& x, const @\ex
 Equivalent to: \tcode{return x.\exposid{i_}.\placeholder{current} == y.\exposid{i_}.\placeholder{current};}
 \end{itemdescr}
 
-\indexlibrarymember{operator==}{split_view::\exposid{inner-iterator}}%
+\indexlibrarymember{operator==}{lazy_split_view::\exposid{inner-iterator}}%
 \begin{itemdecl}
 friend constexpr bool operator==(const @\exposid{inner-iterator}@& x, default_sentinel_t);
 \end{itemdecl}
@@ -5964,7 +6014,7 @@ if constexpr (@\exposconcept{tiny-range}@<Pattern>) {
 \end{codeblock}
 \end{itemdescr}
 
-\indexlibrarymember{iter_swap}{split_view::\exposid{inner-iterator}}%
+\indexlibrarymember{iter_swap}{lazy_split_view::\exposid{inner-iterator}}%
 \begin{itemdecl}
 friend constexpr void iter_swap(const @\exposid{inner-iterator}@& x, const @\exposid{inner-iterator}@& y)
   noexcept(noexcept(ranges::iter_swap(x.@\exposid{i_}@.@\placeholdernc{current}@, y.@\exposid{i_}@.@\placeholdernc{current}@)))
@@ -5976,6 +6026,303 @@ friend constexpr void iter_swap(const @\exposid{inner-iterator}@& x, const @\exp
 \effects
 Equivalent to
 \tcode{ranges::iter_swap(x.\exposid{i_}.\placeholdernc{current}, y.\exposid{i_}.\placeholdernc{current})}.
+\end{itemdescr}
+
+\rSec2[range.split]{Split view}
+
+\rSec3[range.split.overview]{Overview}
+
+\pnum
+\tcode{split_view} takes a \libconcept{view} and a delimiter, and
+splits the \libconcept{view} into \tcode{subrange}s on the delimiter.
+The delimiter can be a single element or a \libconcept{view} of elements.
+
+\pnum
+The name \tcode{views::split} denotes
+a range adaptor object\iref{range.adaptor.object}.
+Given subexpressions \tcode{E} and \tcode{F},
+the expression \tcode{views::split(E, F)} is expression-equivalent to
+\tcode{split_view(E, F)}.
+
+\pnum
+\begin{example}
+\begin{codeblock}
+string str{"the quick brown fox"};
+for (span<char const> word : split(str, ' ')) {
+  for (char ch : word)
+    cout << ch;
+  cout << '*';
+}
+// The above prints: the*quick*brown*fox*
+\end{codeblock}
+\end{example}
+
+\rSec3[range.split.view]{Class template \tcode{split_view}}
+
+\begin{codeblock}
+namespace std::ranges {
+  template<@\libconcept{forward_range}@ V, @\libconcept{forward_range}@ Pattern>
+    requires @\libconcept{view}@<V> && @\libconcept{view}@<Pattern> &&
+             @\libconcept{indirectly_comparable}@<iterator_t<V>, iterator_t<Pattern>, ranges::equal_to>
+  class split_view : public view_interface<split_view<V, Pattern>> {
+  private:
+    V @\exposid{base_}@ = V();                              // \expos
+    Pattern @\exposid{pattern_}@ = Pattern();               // \expos
+    // \ref{range.split.iterator}, class \tcode{split_view::\exposid{iterator}}
+    struct @\exposid{iterator}@;                            // \expos
+    // \ref{range.split.sentinel}, class \tcode{split_view::\exposid{sentinel}}
+    struct @\exposid{sentinel}@;                            // \expos
+  public:
+    split_view() = default;
+    constexpr split_view(V base, Pattern pattern);
+
+    template<@\libconcept{forward_range}@ R>
+      requires @\libconcept{constructible_from}@<V, views::all_t<R>> &&
+               @\libconcept{constructible_from}@<Pattern, single_view<range_value_t<R>>>
+    constexpr split_view(R&& r, range_value_t<R> e);
+
+    constexpr V base() const& requires @\libconcept{copyable}@<V> { return @\exposid{base_}@; }
+    constexpr V base() && { return std::move(@\exposid{base_}@); }
+
+    constexpr @\exposid{iterator}@ begin();
+
+    constexpr auto end() {
+      if constexpr (@\libconcept{common_range}@<V>) {
+        return @\exposid{iterator}@{*this, ranges::end(@\exposid{base_}@), {}};
+      } else {
+        return @\exposid{sentinel}@{*this};
+      }
+    }
+
+    constexpr subrange<iterator_t<V>> @\exposid{find-next}@(iterator_t<V>); // \expos
+  };
+
+  template<class R, class P>
+    split_view(R&&, P&&) -> split_view<views::all_t<R>, views::all_t<P>>;
+
+  template<@\libconcept{forward_range}@ R>
+    split_view(R&&, range_value_t<R>)
+      -> split_view<views::all_t<R>, single_view<range_value_t<R>>>;
+}
+\end{codeblock}
+
+\begin{itemdecl}
+constexpr split_view(V base, Pattern pattern);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Initializes \exposid{base_} with \tcode{std::move(base)}, and
+\exposid{pattern_} with \tcode{std::move(pattern)}.
+\end{itemdescr}
+
+\begin{itemdecl}
+template<@\libconcept{forward_range}@ R>
+  requires @\libconcept{constructible_from}@<V, views::all_t<R>> &&
+           @\libconcept{constructible_from}@<Pattern, single_view<range_value_t<R>>>
+constexpr split_view(R&& r, range_value_t<R> e);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Initializes \exposid{base_} with \tcode{views::all(std::forward<R>(r))}, and
+\exposid{pattern_} with \tcode{single_view\{std::move(e)\}}.
+\end{itemdescr}
+
+\begin{itemdecl}
+constexpr @\exposid{iterator}@ begin();
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\returns
+\tcode{\{*this, ranges::begin(\exposid{base_}), \exposid{find-next}(ranges::begin(\exposid{base_}))\}}.
+
+\pnum
+\remarks
+In order to provide the amortized constant time complexity
+required by the \libconcept{range} concept,
+this function caches the result within the \tcode{split_view}
+for use on subsequent calls.
+\end{itemdescr}
+
+\begin{itemdecl}
+constexpr subrange<iterator_t<V>> @\exposid{find-next}@(iterator_t<V> it); // \expos
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Equivalent to:
+\begin{codeblock}
+auto [b,e] = ranges::search(subrange(it, ranges::end(@\exposid{base_}@)), @\exposid{pattern_}@);
+if (b != ranges::end(@\exposid{base_}@) && ranges::empty(@\exposid{pattern_}@)) {
+  ++b;
+  ++e;
+}
+return {b,e};
+\end{codeblock}
+\end{itemdescr}
+
+\rSec3[range.split.iterator]{Class \tcode{split_view::\exposid{iterator}}}
+
+\begin{codeblock}
+namespace std::ranges {
+  template<@\libconcept{forward_range}@ V, @\libconcept{forward_range}@ Pattern>
+    requires @\libconcept{view}@<V> && @\libconcept{view}@<Pattern> &&
+             @\libconcept{indirectly_comparable}@<iterator_t<V>, iterator_t<Pattern>, ranges::equal_to>
+  class split_view<V, Pattern>::@\exposid{iterator}@ {
+  private:
+    split_view* @\exposid{parent_}@ = nullptr;                              // \expos
+    iterator_t<V> @\exposid{cur_}@ = iterator_t<V>();                       // \expos
+    subrange<iterator_t<V>> @\exposid{next_}@ = subrange<iterator_t<V>>();  // \expos
+    bool @\exposid{trailing_empty_}@ = false;                               // \expos
+
+  public:
+    using iterator_concept = forward_iterator_tag;
+    using iterator_category = input_iterator_tag;
+    using value_type = subrange<iterator_t<V>>;
+    using difference_type = range_difference_t<V>;
+
+    @\exposid{iterator}@() = default;
+    constexpr @\exposid{iterator}@(split_view& parent, iterator_t<V> current, subrange<iterator_t<V>> next);
+
+    constexpr iterator_t<V> base() const;
+    constexpr value_type operator*() const;
+
+    constexpr @\exposid{iterator}@& operator++();
+    constexpr @\exposid{iterator}@ operator++(int);
+
+    friend constexpr bool operator==(const @\exposid{iterator}@& x, const @\exposid{iterator}@& y);
+  };
+}
+\end{codeblock}
+
+\begin{itemdecl}
+constexpr @\exposid{iterator}@(split_view& parent, iterator_t<V> current, subrange<iterator_t<V>> next);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Initializes \exposid{parent_} with \tcode{addressof(parent)},
+\exposid{cur_} with \tcode{std::move(current)}, and
+\exposid{next_} with \tcode{std::move(next)}.
+\end{itemdescr}
+
+\begin{itemdecl}
+constexpr iterator_t<V> base() const;
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Equivalent to \tcode{return \exposid{cur_};}
+\end{itemdescr}
+
+\begin{itemdecl}
+constexpr value_type operator*() const;
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Equivalent to \tcode{return {\exposid{cur_}, \exposid{next_}.begin()};}
+\end{itemdescr}
+
+\begin{itemdecl}
+constexpr @\exposid{iterator}@& operator++();
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Equivalent to:
+\begin{codeblock}
+@\exposid{cur_}@ = @\exposid{next_}@.begin();
+if (@\exposid{cur_}@ != ranges::end(@\exposid{parent_}@->@\exposid{base_}@)) {
+  @\exposid{cur_}@ = @\exposid{next_}@.end();
+  if (@\exposid{cur_}@ == ranges::end(@\exposid{parent_}@->@\exposid{base_}@)) {
+    @\exposid{trailing_empty_}@ = true;
+    @\exposid{next_}@ = {@\exposid{cur_}@, @\exposid{cur_}@};
+  } else {
+    @\exposid{next_}@ = @\exposid{parent_}@->@\exposid{find-next}@(@\exposid{cur_}@);
+  }
+} else {
+  @\exposid{trailing_empty_}@ = false;
+}
+return *this;
+\end{codeblock}
+\end{itemdescr}
+
+\begin{itemdecl}
+constexpr @\exposid{iterator}@ operator++(int);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Equivalent to:
+\begin{codeblock}
+auto tmp = *this;
+++*this;
+return tmp;
+\end{codeblock}
+\end{itemdescr}
+
+\begin{itemdecl}
+friend constexpr bool operator==(const @\exposid{iterator}@& x, const @\exposid{iterator}@& y);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Equivalent to:
+\begin{codeblock}
+return x.@\exposid{cur_}@ == y.@\exposid{cur_}@ && x.@\exposid{trailing_empty_}@ == y.@\exposid{trailing_empty_}@;
+\end{codeblock}
+\end{itemdescr}
+
+\rSec3[range.split.sentinel]{Class \tcode{split_view::\exposid{sentinel}}}
+
+\begin{codeblock}
+namespace std::ranges {
+  template<@\libconcept{forward_range}@ V, @\libconcept{forward_range}@ Pattern>
+    requires @\libconcept{view}@<V> && @\libconcept{view}@<Pattern> &&
+             @\libconcept{indirectly_comparable}@<iterator_t<V>, iterator_t<Pattern>, ranges::equal_to>
+  struct split_view<V, Pattern>::@\exposid{sentinel}@ {
+  private:
+    sentinel_t<V> @\exposid{end_}@ = sentinel_t<V>();               // \expos
+
+  public:
+    @\exposid{sentinel}@() = default;
+    constexpr explicit @\exposid{sentinel}@(split_view& parent);
+
+    friend constexpr bool operator==(const @\exposid{iterator}@& x, const @\exposid{sentinel}@& y);
+  };
+}
+\end{codeblock}
+
+\begin{itemdecl}
+constexpr explicit @\exposid{sentinel}@(split_view& parent);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Initializes \exposid{end_} with \tcode{ranges::end(parent.\exposid{base_})}.
+\end{itemdescr}
+
+\begin{itemdecl}
+friend constexpr bool operator==(const @\exposid{iterator}@& x, const @\exposid{sentinel}@& y);
+\end{itemdecl}
+
+\begin{itemdescr}
+\pnum
+\effects
+Equivalent to: \tcode{return x.\exposid{cur_} == y.\exposid{end_} \&\& !x.\exposid{trailing_empty_};}
 \end{itemdescr}
 
 \rSec2[range.counted]{Counted view}
