P2367R0 Remove misuses of list-initialization from Clause 24
Also fixes LWG3524.

--- a/source/ranges.tex
+++ b/source/ranges.tex
@@ -1650,8 +1650,8 @@ constexpr subrange(R&& r) requires (!@\exposid{StoreSize}@ || @\libconcept{sized
 Equivalent to:
 \begin{itemize}
 \item If \exposid{StoreSize} is \tcode{true},
-\tcode{subrange\{r, ranges::size(r)\}}.
-\item Otherwise, \tcode{subrange\{ranges::begin(r), ranges::end(r)\}}.
+\tcode{subrange(r, ranges::size(r))}.
+\item Otherwise, \tcode{subrange(ranges::begin(r), ranges::end(r))}.
 \end{itemize}
 \end{itemdescr}
 
@@ -1930,7 +1930,7 @@ The name \tcode{views::single} denotes a
 customization point object\iref{customization.point.object}.
 Given a subexpression \tcode{E}, the expression
 \tcode{views::single(E)} is expression-equivalent to
-\tcode{single_view\{E\}}.
+\tcode{single_view<decay_t<decltype((E))>>(E)}.
 
 \pnum
 \begin{example}
@@ -1967,6 +1967,9 @@ namespace std::ranges {
     constexpr T* data() noexcept;
     constexpr const T* data() const noexcept;
   };
+
+  template<class T>
+    single_view(T) -> single_view<T>;
 }
 \end{codeblock}
 
@@ -2068,7 +2071,7 @@ customization point object\iref{customization.point.object}.
 Given subexpressions \tcode{E} and \tcode{F}, the expressions
 \tcode{views::iota(E)} and \tcode{views::iota(E, F)}
 are expression-equivalent to
-\tcode{iota_view\{E\}} and \tcode{iota_view\{E, F\}}, respectively.
+\tcode{iota_view(E)} and \tcode{iota_view(E, F)}, respectively.
 
 \pnum
 \begin{example}
@@ -3181,7 +3184,7 @@ The name \tcode{views::filter} denotes a
 range adaptor object\iref{range.adaptor.object}.
 Given subexpressions \tcode{E} and \tcode{P},
 the expression \tcode{views::filter(E, P)} is expression-equivalent to
-\tcode{filter_view\{E, P\}}.
+\tcode{filter_view(E, P)}.
 
 \pnum
 \begin{example}
@@ -3604,7 +3607,7 @@ The name \tcode{views::transform} denotes a
 range adaptor object\iref{range.adaptor.object}.
 Given subexpressions \tcode{E} and \tcode{F}, the expression
 \tcode{views::transform(E, F)} is expression-equivalent to
-\tcode{transform_view\{E, F\}}.
+\tcode{transform_view(E, F)}.
 
 \pnum
 \begin{example}
@@ -4317,7 +4320,9 @@ is expression-equivalent to:
 \item
 If \tcode{T} is a specialization
 of \tcode{ranges::empty_view}\iref{range.empty.view},
-then \tcode{((void) F, \placeholdernc{decay-copy}(E))}.
+then \tcode{((void) F, \placeholdernc{decay-copy}(E))},
+except that the evaluations of \tcode{E} and \tcode{F}
+are indeterminately sequenced.
 
 \item
 Otherwise, if \tcode{T} models
@@ -4329,11 +4334,11 @@ and is
 \item a specialization of \tcode{ranges::iota_view}\iref{range.iota.view}, or
 \item a specialization of \tcode{ranges::subrange}\iref{range.subrange},
 \end{itemize}
-then \tcode{T\{ranges::begin(E), ranges::begin(E) + min<D>(ranges::size(E), F)\}},
+then \tcode{T(ranges::begin(E), ranges::begin(E) + min<D>(ranges::size(E), F))},
 except that \tcode{E} is evaluated only once.
 
 \item
-Otherwise, \tcode{ranges::take_view\{E, F\}}.
+Otherwise, \tcode{ranges::take_view(E, F)}.
 \end{itemize}
 
 \pnum
@@ -4375,10 +4380,10 @@ namespace std::ranges {
           return ranges::begin(@\exposid{base_}@);
         else {
           auto sz = size();
-          return counted_iterator{ranges::begin(@\exposid{base_}@), sz};
+          return counted_iterator(ranges::begin(@\exposid{base_}@), sz);
         }
       } else
-        return counted_iterator{ranges::begin(@\exposid{base_}@), @\exposid{count_}@};
+        return counted_iterator(ranges::begin(@\exposid{base_}@), @\exposid{count_}@);
     }
 
     constexpr auto begin() const requires @\libconcept{range}@<const V> {
@@ -4387,10 +4392,10 @@ namespace std::ranges {
           return ranges::begin(@\exposid{base_}@);
         else {
           auto sz = size();
-          return counted_iterator{ranges::begin(@\exposid{base_}@), sz};
+          return counted_iterator(ranges::begin(@\exposid{base_}@), sz);
         }
       } else
-        return counted_iterator{ranges::begin(@\exposid{base_}@), @\exposid{count_}@};
+        return counted_iterator(ranges::begin(@\exposid{base_}@), @\exposid{count_}@);
     }
 
     constexpr auto end() requires (!@\exposconcept{simple-view}@<V>) {
@@ -4538,7 +4543,7 @@ The name \tcode{views::take_while} denotes
 a range adaptor object\iref{range.adaptor.object}.
 Given subexpressions \tcode{E} and \tcode{F},
 the expression \tcode{views::take_while(E, F)}
-is expression-equivalent to \tcode{take_while_view\{E, F\}}.
+is expression-equivalent to \tcode{take_while_view(E, F)}.
 
 \pnum
 \begin{example}
@@ -4726,7 +4731,9 @@ is expression-equivalent to:
 \item
 If \tcode{T} is a specialization of
 \tcode{ranges::empty_view}\iref{range.empty.view},
-then \tcode{((void) F, \placeholdernc{decay-copy}(E))}.
+then \tcode{((void) F, \placeholdernc{decay-copy}(E))},
+except that the evaluations of \tcode{E} and \tcode{F}
+are indeterminately sequenced.
 
 \item
 Otherwise, if \tcode{T} models
@@ -4738,11 +4745,11 @@ and is
 \item a specialization of \tcode{ranges::iota_view}\iref{range.iota.view}, or
 \item a specialization of \tcode{ranges::subrange}\iref{range.subrange},
 \end{itemize}
-then \tcode{T\{ranges::begin(E) + min<D>(ranges::size(E), F), ranges::end(E)\}},
+then \tcode{T(ranges::begin(E) + min<D>(ranges::size(E), F), ranges::end(E))},
 except that \tcode{E} is evaluated only once.
 
 \item
-Otherwise, \tcode{ranges::drop_view\{E, F\}}.
+Otherwise, \tcode{ranges::drop_view(E, F)}.
 \end{itemize}
 
 \pnum
@@ -4871,7 +4878,7 @@ The name \tcode{views::drop_while}
 denotes a range adaptor object\iref{range.adaptor.object}.
 Given subexpressions \tcode{E} and \tcode{F},
 the expression \tcode{views::drop_while(E, F)}
-is expression-equivalent to \tcode{drop_while_view\{E, F\}}.
+is expression-equivalent to \tcode{drop_while_view(E, F)}.
 
 \pnum
 \begin{example}
@@ -5475,7 +5482,7 @@ The name \tcode{views::split} denotes a
 range adaptor object\iref{range.adaptor.object}.
 Given subexpressions \tcode{E} and \tcode{F},
 the expression \tcode{views::split(E, F)} is expression-equivalent to
-\tcode{split_view\{E, F\}}.
+\tcode{split_view(E, F)}.
 
 \pnum
 \begin{example}
@@ -5590,7 +5597,7 @@ constexpr split_view(R&& r, range_value_t<R> e);
 \pnum
 \effects
 Initializes \exposid{base_} with \tcode{views::all(std::forward<R>(r))}, and
-\exposid{pattern_} with \tcode{single_view\{\brk{}std::move(e)\}}.
+\exposid{pattern_} with \tcode{views::\linebreak single(std::move(e))}.
 \end{itemdescr}
 
 \rSec3[range.split.outer]{Class template \tcode{split_view::\exposid{outer-iterator}}}
@@ -6007,16 +6014,16 @@ is expression-equivalent to:
 \begin{itemize}
 \item
 If \tcode{T} models \libconcept{contiguous_iterator},
-then \tcode{span\{to_address(E), static_cast<D>(F)\}}.
+then \tcode{span(to_address(E), static_cast<D>(F))}.
 
 \item
 Otherwise, if \tcode{T} models \libconcept{random_access_iterator},
-then \tcode{subrange\{E, E + static_cast<D>(F)\}},
+then \tcode{subrange(E, E + static_cast<D>(F))},
 except that \tcode{E} is evaluated only once.
 
 \item
 Otherwise,
-\tcode{subrange\{counted_iterator\{E, F\}, default_sentinel\}}.
+\tcode{subrange(counted_iterator(E, F), default_sentinel)}.
 \end{itemize}
 
 \rSec2[range.common]{Common view}
