fixup: intro text for diff.cpp20

--- a/source/compatibility.tex
+++ b/source/compatibility.tex
@@ -7,7 +7,7 @@
 
 \pnum
 \indextext{summary!compatibility with ISO \CppXX{}}%
-This subclause lists the differences between \Cpp{} and
+Subclause \ref{diff.cpp20} lists the differences between \Cpp{} and
 ISO \CppXX{} (ISO/IEC 14882:2020, \doccite{Programming Languages --- \Cpp{}}),
 by the chapters of this document.
 
