fixup: forgotten "map" constructors

--- a/source/containers.tex
+++ b/source/containers.tex
@@ -6590,8 +6590,8 @@ namespace std {
     map(const map& x);
     map(map&& x);
     explicit map(const Allocator&);
-    map(const map&, const Allocator&);
-    map(map&&, const Allocator&);
+    map(const map&, const type_identity_t<Allocator>&);
+    map(map&&, const type_identity_t<Allocator>&);
     map(initializer_list<value_type>,
       const Compare& = Compare(),
       const Allocator& = Allocator());
