fixup: forgotten word

--- a/source/lib-intro.tex
+++ b/source/lib-intro.tex
@@ -1935,7 +1935,7 @@ See Note C, below.
   \tcode{n} is a value such that
   $\tcode{req} \leq \tcode{n} \leq \tcode{ret.count}$.
   \item
-  Otherwise, \tcode{p} is a value obtained from \tcode{allocate}.
+  Otherwise, \tcode{p} is a pointer value obtained from \tcode{allocate}.
   \tcode{n} equals the value passed as the first argument
   to the invocation of \tcode{allocate} which returned \tcode{p}.
   \end{itemize}
