fixup: could in a note

--- a/source/utilities.tex
+++ b/source/utilities.tex
@@ -11867,7 +11867,7 @@ An implementation can call \tcode{s.release()}.
 The constructor is not \tcode{noexcept}
 to allow for a variety of non-terminating and safe implementation strategies.
 For example, an intrusive pointer implementation with a control block
-could allocate in the constructor and safely fail with an exception.
+can allocate in the constructor and safely fail with an exception.
 \end{note}
 \end{itemdescr}
 
